--- a/ᎠᏍᎩᏘᏍᏗ.mw
+++ b/ᎠᏍᎩᏘᏍᏗ.mw
@@ -1,33 +1,30 @@
-[[File:Pierre-Cécile Puvis de Chavannes 003.jpg|thumb|240px|right|Pierre-Cécile Puvis ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Chavannes: ''ᎯᎠ ᎠᏍᎩᏘᏍᏗ'', 1883]]
-'''ᎠᏍᎩᏘᏍᏗ''' ᎨᏒᎢ ᎯᎠ ugatohvsv envisioned ᎾᏍᎩᏯᎢ, ᎧᏁᎬ ᎤᏲᏴᎬ, ᎠᎴ ᏐᎢ ᎠᏒᎾᏍᏗᏱ ᎾᎯᏳᎨᏒ [[sleep|ᎦᎸᏗ]]. ᏗᏍᎩᏘᏍᏗ ᎢᏳᏓᎵᎭ ᎢᏯᏓᏛᏁᎸ ᏂᏕᎦᎵᏍᏔᏂᏙᎲ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᏰᎵ ᏂᎨᏒᎾ ᎠᎴ ᎧᏁᏍᎦ ᎭᏫᎾᏗᏢ ᏄᎵᏂᎬᎬ ᎤᏙᎯᏳ ᏄᏍᏛ, ᎠᎴ ᎠᎴ ᎤᏠᏱᎭ ᏙᏯᏗᏢ ᎯᎠ ᎠᎨᏔᏗᏍᏗ ᎯᎠ ᎤᎿᎸ ᎠᏍᎦᏯ, (ᎾᏍᎩ ᎤᏁᎳᎩ ᎢᎦᏛ ᏴᏫ ᎤᎭ ᎬᏂᎨᏒ ᎢᎬᏁᎸ [[lucid dreaming|ᎠᏨᏍᏛ ᎢᏰᎵᏍᏗᎢ]], ᏓᎵᏆᎵᏍᎬ ᎯᎠ [[suspension of disbelief|ᎠᎴᏫᏍᏙᏗ ᎾᎪᎯᏳᎲᏍᎬᎾ]] ᎠᎴ realizing ᎤᏅᏌ ᎠᎴ dreaming—being ᏱᏓᏟᎶᏍᏔᏅ ᎢᏧᎳᎭ ᏰᎵᏇ ᎢᎬᏁᏗ ᎦᏁᏟᏴᏍᎬ ᎯᎠ oneiric ᎤᏙᎯᏳ ᏄᏍᏛ yvwatuwidv ᎠᏂ ᎠᎴ ᎠᎨᏔᏗᏍᏗ ᏧᏓᎴᏅᏓ ᎢᎦᏛ ᎯᎠ ᎠᏍᎩᏘᏍᏗ). ᎤᎪᏗᏗ ᏴᏫ ᎬᏂᎨᏒ ᎢᎬᏁᏗ experiencing ᎤᎳᏂᎩᏓ ᎠᏓᏖᎸᏍᎬ ᎾᎯᏳᎢ ᎢᏰᎵᏍᏗᎢ, ᎠᎴ ᎤᎾᏰᎯᏍᏗ ᎠᎴ upsetting ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᏩᏎᎸᎯ ᏥᏄᏍᏗ [[nightmare|ᎡᎯᏍᏛ]]. ᎯᎠ ᎠᏏᎾᏍᏛ ᏓᏕᏲᎲᏍᎬ ᎠᏍᎩᏘᏍᏗ ᏅᎠᏯᏍᏗ ᎨᏒᎢ
+[[File:Le songe de la raison.jpg|thumb|''ᎦᎸᏗ ᎠᏓᏅᏕᏗ ᎠᏛᎯᏍᏗ [[monsters|ᎠᏂᏍᎩᏂ]]'', [[Francisco Goya]], [[ᏍᏆᏂ]], 1799]]
+[[File:Pierre-Cécile Puvis de Chavannes 003.jpg|thumb|240px|Pierre-Cécile Puvis ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Chavannes: ''ᎯᎠ ᎠᏍᎩᏘᏍᏗ'', 1883]]
+'''ᎠᏍᎩᏘᏍᏗ''' ᎨᏒᎢ ᎯᎠ [[experiece|ᎤᎦᏙᎲᏒ]] envisioned ᎾᏍᎩᏯᎢ, ᎧᏁᎬ ᎤᏲᏴᎬ, ᎠᎴ ᏐᎢ ᎠᏒᎾᏍᏗᏱ ᎾᎯᏳᎨᏒ [[sleep|ᎦᎸᏗ]]. ᏗᏍᎩᏘᏍᏗ ᎢᏳᏓᎵᎭ ᎢᏯᏓᏛᏁᎸ ᏂᏕᎦᎵᏍᏔᏂᏙᎲ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᏰᎵ ᏂᎨᏒᎾ ᎠᎴ ᎧᏁᏍᎦ ᎭᏫᎾᏗᏢ ᏄᎵᏂᎬᎬ ᎤᏙᎯᏳ ᏄᏍᏛ, ᎠᎴ ᎠᎴ ᎤᏠᏱᎭ ᏙᏯᏗᏢ ᎯᎠ ᎠᎨᏔᏗᏍᏗ ᎯᎠ ᎤᎿᎸ ᎠᏍᎦᏯ, (ᎾᏍᎩ ᎤᏁᎳᎩ ᎢᎦᏛ ᏴᏫ ᎤᎭ ᎬᏂᎨᏒ ᎢᎬᏁᎸ [[lucid dreaming|ᎠᏨᏍᏛ ᎢᏰᎵᏍᏗᎢ]], ᏓᎵᏆᎵᏍᎬ ᎯᎠ [[suspension of disbelief|ᎠᎴᏫᏍᏙᏗ ᎾᎪᎯᏳᎲᏍᎬᎾ]] ᎠᎴ realizing ᎤᏅᏌ ᎠᎴ dreaming—being ᏱᏓᏟᎶᏍᏔᏅ ᎢᏧᎳᎭ ᏰᎵᏇ ᎢᎬᏁᏗ ᎦᏁᏟᏴᏍᎬ ᎯᎠ oneiric ᎤᏙᎯᏳ ᏄᏍᏛ ᏴᏩᏚᏫᏛ ᎠᏂ ᎠᎴ ᎠᎨᏔᏗᏍᏗ ᏧᏓᎴᏅᏓ ᎢᎦᏛ ᎯᎠ ᎠᏍᎩᏘᏍᏗ). ᎤᎪᏗᏗ ᏴᏫ ᎬᏂᎨᏒ ᎢᎬᏁᏗ experiencing ᎤᎳᏂᎩᏓ ᎠᏓᏖᎸᏍᎬ ᎾᎯᏳᎢ ᎢᏰᎵᏍᏗᎢ, ᎠᎴ ᎤᎾᏰᎯᏍᏗ ᎠᎴ upsetting ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᏩᏎᎸᎯ ᏥᏄᏍᏗ [[nightmare|ᎡᎯᏍᏛ]]. ᎯᎠ ᎠᏏᎾᏍᏛ ᏓᏕᏲᎲᏍᎬ ᎠᏍᎩᏘᏍᏗ ᏅᎠᏯᏍᏗ ᎨᏒᎢ
 [[oneirology]].
 
-ᏗᏍᎩᏘᏍᏗ ᎤᎭ ᎦᏅᎯᏓ ᎧᏃᎮᏍᎩ ᎢᏧᎳ ᏥᏄᏍᏗ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᏄᏍᏗᏓᏅ ᎠᎴ ᏥᏄᏍᏗ ᏗᏓᎴᎲᏍᎬ ᎠᏓᎵᎦᎵᏍᏗᏍᎩ (ᏗᏟᎶᏍᏗᏍᎩ ᎠᎴ ᎢᏳᏃ ᏰᎵ). ᏂᎦᏅᎯᏒ ᎧᏃᎮᏍᎩ, ᏴᏫ ᎤᎭ ᎤᏯᎸᎩ [[Dream interpretation|ᎦᏛᎬᎢ ᎭᏫᎾᏗᏢ ᏗᏍᎩᏘᏍᏗ]]. ᎤᏅᏌ ᎤᎭ ᏭᏪᏙᎢ ᏄᏍᏛ ᎧᏃᎮᎸ [[physiology|physiologically]] ᏥᏄᏍᏗ ᎦᏬᎯᎵᏴᏓ neural processes ᎾᎯᏳᎨᏒ ᎦᎸᏗ, [[psychology|ᎣᏓᏅᏛ]] ᏥᏄᏍᏗ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ ᎯᎠ [[unconscious|ᎾᏕᎶᎰᏍᎬᎾ]], ᎠᎴ [[spirituality|ᎠᏂᏏᏴᏫ ᏄᎾᏍᏛ]] ᏥᏄᏍᏗ ᎨᏥᏃᎯᏎᏗ ᏂᏛᎴᏅᏓ [[God|ᎤᏁᎳᏅᎯ]] ᎠᎴ utugi gvsv ᎯᎠ ᎤᏩᎫᏗᏗᏒ ([[oneiromancy|ᏗᎦᏃᏣᎳᏅ]]).
+ᏗᏍᎩᏘᏍᏗ ᎤᎭ ᎦᏅᎯᏓ ᎧᏃᎮᏍᎩ ᎢᏧᎳ ᏥᏄᏍᏗ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᏄᏍᏗᏓᏅ ᎠᎴ ᏥᏄᏍᏗ ᏗᏓᎴᎲᏍᎬ ᎠᏓᎵᎦᎵᏍᏗᏍᎩ (ᏗᏟᎶᏍᏗᏍᎩ ᎠᎴ ᎢᏳᏃ ᏰᎵ). ᏂᎦᏅᎯᏒ ᎧᏃᎮᏍᎩ, ᏴᏫ ᎤᎭ ᎤᏯᎸᎩ [[Dream interpretation|ᎦᏛᎬᎢ ᎭᏫᎾᏗᏢ ᏗᏍᎩᏘᏍᏗ]]. ᎤᏅᏌ ᎤᎭ ᏭᏪᏙᎢ ᏄᏍᏛ ᎧᏃᎮᎸ [[physiology|physiologically]] ᏥᏄᏍᏗ ᎦᏬᎯᎵᏴᏓ neural processes ᎾᎯᏳᎨᏒ ᎦᎸᏗ, [[psychology|ᎣᏓᏅᏛ]] ᏥᏄᏍᏗ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ ᎯᎠ [[unconscious|ᎾᏕᎶᎰᏍᎬᎾ]], ᎠᎴ [[spirituality|ᎠᏂᏏᏴᏫ ᏄᎾᏍᏛ]] ᏥᏄᏍᏗ ᎨᏥᏃᎯᏎᏗ ᏂᏛᎴᏅᏓ [[God|ᎤᏁᎳᏅᎯ]] ᎠᎴ ᏴᏩᏚᏫᏛ ᎯᎠ ᎤᏩᎫᏗᏗᏒ ([[oneiromancy|ᏗᎦᏃᏣᎳᏅ]]).
 
-ᎤᎪᏗᏗ ᎧᏃᎮᎸᏗ ᎤᏬᎯᏳ Ꮎ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ ᎠᏂᏴᏫ ᎠᏍᎩᏘᏍᏗ ᎬᏙᏗ ᎾᎥᏂᎨᏍᏙᏗᏇ ᎯᎠ ᎤᏠᏱ ᎠᏍᏓᏩᏛᏍᏙᏗ. ᎢᏧᎳᎭ ᎾᏍᎩ ᎦᎪ ᎢᏅᎯ ᎢᏳᏓᎵ ᏅᎠᏥᏯᏃᏗ ᏗᏍᎩᏘᏍᏗ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎤᎲᎢ ᎠᏂ ᎢᏳᏃ awakened ᎾᎯᏳᎨᏒ [[rapid eye movement|ᎦᏣᏄᎳ agatoli ᎠᏓᏅᏏᏙᎠ]] ᎬᏙᏗ ᎦᎸᏗ. ᎢᏰᎵᏍᏗᎢ ᎭᏫᎾᏗᏢ ᎡᎿᎢ ᎡᎥ varies ᏂᏛᎴᏅᏓ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏍᎩᏘᏍᏗ ᎾᎾᎢ ᏂᎦᏛ. 
+ᎤᎪᏗᏗ ᎧᏃᎮᎸᏗ ᎤᏬᎯᏳ Ꮎ ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ ᎠᏂᏴᏫ ᎠᏍᎩᏘᏍᏗ ᎬᏙᏗ ᎾᎥᏂᎨᏍᏙᏗᏇ ᎯᎠ ᎤᏠᏱ ᎠᏍᏓᏩᏛᏍᏙᏗ. ᎢᏧᎳᎭ ᎾᏍᎩ ᎦᎪ ᎢᏅᎯ ᎢᏳᏓᎵ ᏅᎠᏥᏯᏃᏗ ᏗᏍᎩᏘᏍᏗ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎤᎲᎢ ᎠᏂ ᎢᏳᏃ awakened ᎾᎯᏳᎨᏒ [[rapid eye movement|ᎦᏣᏄᎳ ᎠᎦᏙᎵ ᎠᏓᏅᏏᏙᎠ]] ᎬᏙᏗ ᎦᎸᏗ. ᎢᏰᎵᏍᏗᎢ ᎭᏫᎾᏗᏢ ᎡᎿᎢ ᎡᎥ varies ᏂᏛᎴᏅᏓ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏍᎩᏘᏍᏗ ᎾᎾᎢ ᏂᎦᏛ. 
 
-== ᏗᏍᎩᏘᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎸᎯᏳᎢ itsuwakodi ==
+== ᏗᏍᎩᏘᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎸᎯᏳᎢ ᎢᏧᏩᎪᏗ ==
 
-ᎭᏫᎾᏗᏢ [[ancient history|tsuqagutanvsv]], ᏗᏍᎩᏘᏍᏗ ᎨᏒᎩ ᏁᎵᏒ ᎾᏍᏋ ᎢᎦᏛ ᎯᎠ ᎤᏁᎳᏅᎯ ᎠᎦᏘᏯ ᎡᎶᎯ, ᎠᎴ ᎨᏒᎩ ᎠᎪᎲᎢ ᏥᏄᏍᏗ ᎨᏥᏃᎯᏎᏗ ᏂᏛᎴᏅᏓ ᎯᎠ [[deity|ᎦᏁᎸ]]. ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᏧᏣᏔᏊ ᎾᏍᎩᎾᎢ ᏗᏓᏘᏁᎯ ᎠᎩᏍᏗ ᎠᏍᎩᏘᏍᏗ-ᎦᏬᎯᎵᏴᏛ [[battle|ᏓᎾᏟᎲ]]ᎠᎩᏍᏗ ᎤᎾᏤᎵ ᎠᏓᏕᏲᏗ ᎠᎴ ᏓᏕᏲᎲᏍᎬ.
+ᎭᏫᎾᏗᏢ [[ancient history|ᏧᏩᏓᏔᏅᏒ]], ᏗᏍᎩᏘᏍᏗ ᎨᏒᎩ ᏁᎵᏒ ᎾᏍᏋ ᎢᎦᏛ ᎯᎠ ᎤᏁᎳᏅᎯ ᎠᎦᏘᏯ ᎡᎶᎯ, ᎠᎴ ᎨᏒᎩ ᎠᎪᎲᎢ ᏥᏄᏍᏗ ᎨᏥᏃᎯᏎᏗ ᏂᏛᎴᏅᏓ ᎯᎠ [[deity|ᎦᏁᎸ]]. ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᏧᏣᏔᏊ ᎾᏍᎩᎾᎢ ᏗᏓᏘᏁᎯ ᎠᎩᏍᏗ ᎠᏍᎩᏘᏍᏗ-ᎦᏬᎯᎵᏴᏛ [[battle|ᏓᎾᏟᎲ]] ᎠᎩᏍᏗ ᎤᎾᏤᎵ ᎠᏓᏕᏲᏗ ᎠᎴ ᏓᏕᏲᎲᏍᎬ.
 
-ᎾᏍᎩᏯᎢᎨᏙᏗ, ᎯᎠ ᎦᎸᏉᏗᏳ ᏗᎪᏪᎵ Torah (ᎤᎾᏅᏛ ᎭᏫᎾᏗᏢ ᏚᏳᎪᏛ ᏥᏄᏍᏗ ᎯᎠ ᎢᎬᏱ 5 ᏗᎪᏪᎵ ᎯᎠ ᎠᎦᏴᎵ ᎢᏤ ᎧᏃᎮᏛ) ᎠᎴ Koran ᎢᏧᎳ ᏚᎵᏃᎮᎸ ᎯᎠ ᎤᏠᏱ ᎧᏃᎮᎸᏍᎩ ᏧᏳᎪᏗᎭ, ᎦᎪ ᏥᏄᏍᏛᎩ ᎠᏓᏁᎸ ᎯᎠ ᎤᎳᏂᎬᎬ ᎠᏁᎳᏙᏗ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎢᏯᏛᏁᎯ ᎧᎵ ᏗᏙᎳᎩ. ᎢᎦᏛ ᏙᏧᏓᎴᏅ ᎾᏍᎩ ᎾᏍᏇ ᎤᏔᏂᏗ ᎦᏙᎯ Ꮎ ᎾᏍᎩᏯᎢ ᏧᏳᎪᏗᎭ, ᎤᎪᏗᏗ ᏐᎢ ᎠᏕᎶᎰᏍᎩ ᎨᏒᎩ ᏄᏍᏛ ᎧᏃᎮᎸ ᎤᎭ ᏭᎵᏂᎬᎬ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎠᏁᎳᏙᏗ ᎯᎠ ᎾᏍᎩᏯᎢ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᏗᏍᎩᏘᏍᏗ ᎦᏂ ᎯᎠ ᏴᏫ yvwatuwidv ᎠᏂ.
+ᎾᏍᎩᏯᎢᎨᏙᏗ, ᎯᎠ ᎦᎸᏉᏗᏳ ᏗᎪᏪᎵ Torah (ᎤᎾᏅᏛ ᎭᏫᎾᏗᏢ ᏚᏳᎪᏛ ᏥᏄᏍᏗ ᎯᎠ ᎢᎬᏱ 5 ᏗᎪᏪᎵ ᎯᎠ ᎠᎦᏴᎵ ᎢᏤ ᎧᏃᎮᏛ) ᎠᎴ Koran ᎢᏧᎳ ᏚᎵᏃᎮᎸ ᎯᎠ ᎤᏠᏱ ᎧᏃᎮᎸᏍᎩ ᏧᏳᎪᏗᎭ, ᎦᎪ ᏥᏄᏍᏛᎩ ᎠᏓᏁᎸ ᎯᎠ ᎤᎳᏂᎬᎬ ᎠᏁᎳᏙᏗ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎢᏯᏛᏁᎯ ᎧᎵ ᏗᏙᎳᎩ. ᎢᎦᏛ ᏙᏧᏓᎴᏅ ᎾᏍᎩ ᎾᏍᏇ ᎤᏔᏂᏗ ᎦᏙᎯ Ꮎ ᎾᏍᎩᏯᎢ ᏧᏳᎪᏗᎭ, ᎤᎪᏗᏗ ᏐᎢ ᎠᏕᎶᎰᏍᎩ ᎨᏒᎩ ᏄᏍᏛ ᎧᏃᎮᎸ ᎤᎭ ᏭᎵᏂᎬᎬ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎠᏁᎳᏙᏗ ᎯᎠ ᎾᏍᎩᏯᎢ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᏗᏍᎩᏘᏍᏗ ᎦᏂ ᎯᎠ ᏴᏫ ᏴᏩᏚᏫᏛ ᎠᏂ.
 
-ᎪᎯ ᎤᎵᏱᎸᏛ ᎾᎾᎯ ᎯᎠ ᎢᎬᏱ [[Middle Ages|ᎠᏰᎵ ᎤᎧᏁᎳ]]. ᎧᏃᎮᎸᏍᎩ ᏂᏛᎴᏅᏓ [[Nevers|ᎥᏝ]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᏤᎯᏐᏗᏱ ᎭᏫᎾᏗᏢ ᎯᎠ ''[[Golden Legend|ᏓᎶᏂᎨᏍᏙᏗ ᏄᎵᏍᏔᏂᏙᎸ]]'', ᎧᏃᎮᎭ Ꮎ ᏌᏊ ᏒᏃᏱ ᎯᎠ ᏄᎬᏫᏳᏌᏕᎩ [[Charlemagne]] ᎠᏍᎩᏓᏒᎯ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᏥᏄᏍᏛᎩ ᎠᏥᏍᏕᎸᎲᎩ ᎠᏲᎱᏍᎬ ᏂᏛᎴᏅᏓ [[wild boar|ᎨᏯᏔᎯ ᏏᏆ ᏧᎧᏅᏍᏕᎾ]] ᎾᎯᏳᎨᏒ [[hunt|ᎦᏃᎭᎵᏓᏍᏗ]]. ᎾᏍᎩ ᎠᏍᎦᏯ ᏥᏄᏍᏛᎩ ᎠᏥᏍᏕᎸᎲᎩ ᎾᎥᎢ ᎯᎠ ᎦᎾᏄᎪᏨᎢ [[child|ᎠᏲᎵ]], ᎦᎪ ᎠᏰᎲ atuyastanv ᎠᎯᏯᏍᏗ ᎯᎠ ᏄᎬᏫᏳᏌᏕᎩ ᏂᏛᎴᏅᏓ [[death|ᎠᏲᎱᎯᏍᏗ]] ᎢᏳᏃ ᎾᏍᎩ ᎠᏍᎦᏯ ᏯᏓᎢᏗᏏ ᎠᏓᏁᏗ ᎾᏍᎩ ᎠᏍᎦᏯ ᏧᎾᏄᏬ ᎫᏢᏗ ᎤᏤᎵ nakedness. ᎯᎠ [[bishop|ᎠᎵᏍᏓᏴᏗ]] ᎥᏝ interpreted ᎪᎯ ᎠᏍᎩᏘᏍᏗ ᎤᏁᎫᏥᏛ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᏚᎸᎲ ᎯᎠ ᏄᎬᏫᏳᏌᏕᎩ ᎪᏢᎯᏐᏗ ᎯᎠ [[roof|ᎦᏦᏔ]] ᎯᎠ [[cathedral]] dedicated ᎯᎠ ᎠᏧᏣ-ᎾᏍᎦᏅᏅᎠ [[Saint Quiricus and Saint Julitta|ᎾᏍᎦᏅᏅᎠ Cyricus]]. 
+ᎪᎯ ᎤᎵᏱᎸᏛ ᎾᎾᎯ ᎯᎠ ᎢᎬᏱ [[Middle Ages|ᎠᏰᎵ ᎤᎧᏁᎳ]]. ᎧᏃᎮᎸᏍᎩ ᏂᏛᎴᏅᏓ [[Nevers|ᎥᏝ]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᏤᎯᏐᏗᏱ ᎭᏫᎾᏗᏢ ᎯᎠ ''[[Golden Legend|ᏓᎶᏂᎨᏍᏙᏗ ᏄᎵᏍᏔᏂᏙᎸ]]'', ᎧᏃᎮᎭ Ꮎ ᏌᏊ ᏒᏃᏱ ᎯᎠ ᏄᎬᏫᏳᏌᏕᎩ [[Charlemagne]] ᎠᏍᎩᏓᏒᎯ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᏥᏄᏍᏛᎩ ᎠᏥᏍᏕᎸᎲᎩ ᎠᏲᎱᏍᎬ ᏂᏛᎴᏅᏓ [[wild boar|ᎨᏯᏔᎯ ᏏᏆ ᏧᎧᏅᏍᏕᎾ]] ᎾᎯᏳᎨᏒ [[hunt|ᎦᏃᎭᎵᏓᏍᏗ]]. ᎾᏍᎩ ᎠᏍᎦᏯ ᏥᏄᏍᏛᎩ ᎠᏥᏍᏕᎸᎲᎩ ᎾᎥᎢ ᎯᎠ ᎦᎾᏄᎪᏨᎢ [[child|ᎠᏲᎵ]], ᎦᎪ ᎠᏰᎲ ᎠᏚᏯᏍᏔᏅ ᎠᎯᏯᏍᏗ ᎯᎠ ᏄᎬᏫᏳᏌᏕᎩ ᏂᏛᎴᏅᏓ [[death|ᎠᏲᎱᎯᏍᏗ]] ᎢᏳᏃ ᎾᏍᎩ ᎠᏍᎦᏯ ᏯᏓᎢᏗᏏ ᎠᏓᏁᏗ ᎾᏍᎩ ᎠᏍᎦᏯ ᏧᎾᏄᏬ ᎫᏢᏗ ᎤᏤᎵ nakedness. ᎯᎠ [[bishop|ᎠᎵᏍᏓᏴᏗ]] ᎥᏝ interpreted ᎪᎯ ᎠᏍᎩᏘᏍᏗ ᎤᏁᎫᏥᏛ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᏚᎸᎲ ᎯᎠ ᏄᎬᏫᏳᏌᏕᎩ ᎪᏢᎯᏐᏗ ᎯᎠ [[roof|ᎦᏦᏔ]] ᎯᎠ [[cathedral]] dedicated ᎯᎠ ᎠᏧᏣ-ᎾᏍᎦᏅᏅᎠ [[Saint Quiricus|ᎾᏍᎦᏅᏅᎠ Quiricus]] ᎠᎴ [[Saint Julitta|ᎾᏍᎦᏅᏅᎠ Julitta]]. 
 
 ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂᏯᎨᏍᏙᏗ ᎠᏰᎵ ᎤᎧᏁᎳ, ᏗᏍᎩᏘᏍᏗ ᎨᏒᎩ ᎠᎪᎲᎢ ᏥᏄᏍᏗ ᎠᏓᎪᎵᏰᏍᎩ ᏂᏛᎴᏅᏓ ᎯᎠ [[Devil|ᏨᏍᎩᎾ]], ᎠᎴ ᎯᎠ ᎢᏴ ᎨᏒᎩ ᎠᎪᎲᎢ ᏥᏄᏍᏗ ᎦᏂᏰᎬ. 
 
-ᏱᏂᎬᏛᎾ ᎭᏫᎾᏗᏢ [[India|ᎠᎹ ᎦᏄᎪᎬ]], ᏗᏕᎶᏆᏍᎩ ᏯᏛᎿ ᏥᏄᏍᏗ [[Charaka]] (300 BC) ᎤᏓᏁᎸ ᏅᎪᏢᎯᏐᏗᏱ ᏗᎪᏏᏌᏅ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᎾᏓᏅᏖᏍᎬ ᎣᏂᏗᏢ ᎠᏍᎩᏘᏍᏗ. ᎭᏫᎾᏗᏢ [[Charaka Samhita]], ᎯᎠ ᏗᎪᏏᏌᏅ ᏗᏍᎩᏘᏍᏗ ᎨᏒᎢ ᏥᏄᏍᏗ ᎠᏍᏓᏩᏕᎦ : "ᎯᎠ ᏂᎬᏂᏏᏍᎬ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎦᎵᏉᎩ. ᎤᏅᏌ ᎠᎴ ᎦᏙ ᎤᏍᏗ ᏂᎯ ᎤᎭ ᎠᎪᎲᎢ, ᎤᎾᏛᎦᏅ, ugatohvsvi, ᎠᏚᎳᏗ ugatohvsv, ᎤᏩᏌᏙᏴ ugatohvsv, ᏁᎵᏒᎢ ᎠᎴ ᎾᎥᎢ ᎯᎠ ᎢᎦᏛ ᎤᏁᎳᏅ ᎤᏬᏢᏅ ᎯᎠ ᎠᏰᎸ".
+ᏱᏂᎬᏛᎾ ᎭᏫᎾᏗᏢ [[India|ᎢᏅᏗᎾ]], ᏗᏕᎶᏆᏍᎩ ᏯᏛᎿ ᏥᏄᏍᏗ [[Charaka]] (300 [[BCE|ᎤᏓᎷᎸ]]) ᎤᏓᏁᎸ ᏅᎪᏢᎯᏐᏗᏱ ᏗᎪᏏᏌᏅ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᎾᏓᏅᏖᏍᎬ ᎣᏂᏗᏢ ᎠᏍᎩᏘᏍᏗ. ᎭᏫᎾᏗᏢ [[Charaka Samhita]], ᎯᎠ ᏗᎪᏏᏌᏅ ᏗᏍᎩᏘᏍᏗ ᎨᏒᎢ ᏥᏄᏍᏗ ᎠᏍᏓᏩᏕᎦ: "ᎯᎠ ᏂᎬᏂᏏᏍᎬ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎦᎵᏉᎩ. ᎤᏅᏌ ᎠᎴ ᎦᏙ ᎤᏍᏗ ᏂᎯ ᎤᎭ ᎠᎪᎲᎢ, ᎤᎾᏛᎦᏅ, ᎤᎦᏙᎲᏒ, ᎠᏚᎳᏗ ᎤᎦᏙᎲᏒ, ᎤᏩᏌᏙᏴ ᎤᎦᏙᎲᏒ, ᏁᎵᏒᎢ ᎠᎴ ᎾᎥᎢ ᎯᎠ ᎢᎦᏛ ᎤᏁᎳᏅ ᎤᏬᏢᏅ ᎯᎠ ᎠᏰᎸ."
 
-ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂᏯᎨᏍᏙᏗ 19th sqohitsuqui tsudetiyvdi ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ theories Sigmund Freud, ᏗᏍᎩᏘᏍᏗ ᎨᏒᎩ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ ᏴᏫ ᎤᏚᎵᎭ ᎠᎴ ᎨᏒᎩ prompted ᎾᎥᎢ ᎤᏓᏎᎦᏤᏗ stimuli.
-
-{{section stub}}
+ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏂᏯᎨᏍᏙᏗ 19th ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ theories Sigmund Freud, ᏗᏍᎩᏘᏍᏗ ᎨᏒᎩ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ ᏴᏫ ᎤᏚᎵᎭ ᎠᎴ ᎨᏒᎩ prompted ᎾᎥᎢ ᎤᏓᏎᎦᏤᏗ stimuli.
 
 == ᎪᎵᏍᏗᏱ ᏗᏍᎩᏘᏍᏗ ==
+=== ᎯᎠ ᎤᏚᎩ ᎬᏒ fulfilment ᎪᎷᏩᏛᏗ ᏗᏍᎩᏘᏍᏗ ===
 
-=== ᎯᎠ utugi gvsv fulfilment ᎪᎷᏩᏛᏗ ᏗᏍᎩᏘᏍᏗ ===
-{{ExpertVerify|July 2006}}
-
-ᎣᏓᏅᏛ [[Joe Griffin|Joe ᏓᎦᏘᎴᎬ]], ᏌᏊ ᎯᎠ ᎠᏩᏥᎩ [[human givens|ᏴᏫ ᎠᏓᏁᎸ]] ᎣᏓᏅᏛ, ᎤᎭ ᏩᏗᏱ ᎢᎬᏱᏗᏢ ᎠᏂᎩᏍᏗ ᏗᎪᏏᏌᏅ ᎾᏍᎩᎾᎢ ᎦᏙᏃ ᎠᏂᏴᏫ ᎠᏍᎩᏘᏍᏗ: ᎯᎠ utugi gvsv fulfilment ᎪᎷᏩᏛᏗ ᎢᏰᎵᏍᏗᎢ. ᎾᏍᎩ ᎠᏍᎦᏯ reviewed ᏂᎦᏛ ᎯᎠ ᏰᎵ ᎠᏩᏛᏗ ᎠᏏᎾᏍᏛ ᎪᎯᏳᏙ ᎠᎴ nadvndhvgi 12 ᏑᏕᏘᏴᏓ ᎢᏯᏛᏁᏗ ᏅᎠᏯᏍᏗ Ꮎ ᎤᏓᏎᎮᎸᎩ Ꮎ ᏂᎦᏛ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎢᏳᏂᏪᏛ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᎣᏓᏅᏛ ᎾᎥᏂᎨ ᎡᎵᏍᏗ.<ref>{{cite book
+ᎣᏓᏅᏛ [[Joe Griffin], ᏌᏊ ᎯᎠ ᎠᏩᏥᎩ [[human givens|ᏴᏫ ᎠᏓᏁᎸ]] ᎣᏓᏅᏛ, ᎤᎭ ᏩᏗᏱ ᎢᎬᏱᏗᏢ ᎠᏂᎩᏍᏗ ᏗᎪᏏᏌᏅ ᎾᏍᎩᎾᎢ ᎦᏙᏃ ᎠᏂᏴᏫ ᎠᏍᎩᏘᏍᏗ: ᎯᎠ ᎤᏚᎩ ᎬᏒ fulfilment ᎪᎷᏩᏛᏗ ᎢᏰᎵᏍᏗᎢ. ᎾᏍᎩ ᎠᏍᎦᏯ reviewed ᏂᎦᏛ ᎯᎠ ᏰᎵ ᎠᏩᏛᏗ ᎠᏏᎾᏍᏛ ᎪᎯᏳᏙ ᎠᎴ ᎾᏛᏁᎲᎩ 12 ᏑᏕᏘᏴᏓ ᎢᏯᏛᏁᏗ ᏅᎠᏯᏍᏗ Ꮎ ᎤᏓᏎᎮᎸᎩ Ꮎ ᏂᎦᏛ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎢᏳᏂᏪᏛ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᎣᏓᏅᏛ ᎾᎥᏂᎨ ᎡᎵᏍᏗ.<ref>{{cite book
 | last = Griffin
 | first = J.
 | year = 1997
@@ -39,10 +36,10 @@
  = Tyrrell, I.
 | year = 2004
 | title = Dreaming Reality: How dreaming keeps us sane or can drive us mad
-| publisher HG Publishing
-}}</ref>   Interviewed ᎾᎥᎢ ''ᎢᏤ ᎧᏃᎮᎸᏗ'' ᎾᏍᎩ ᎠᏍᎦᏯ ᏗᎪᏏᏌᏅᎯ ᎯᎳᎪ ᎤᏤᎵ ᎥᏩᏘᏍᎬ "ᎤᎾᏛᏁᎸᏗ Ꮎ ᏥᏭᏣᏔᏊ ᎠᏍᎩᏘᏍᏗ ᎦᎸᏗ ᎾᏛᏁ ᎡᏆ ᎦᏁᎸᎢ ᏧᎸᏫᏍᏓᏁᏗ ᎾᏍᎩᎾᎢ ᎢᏧᎳ ᎠᏴ. ᎠᏂᏏᏴᏫᎭ ᏒᏃᏱ ᎾᏍᎩ ᎠᏂᏲᎯᎭ ᎡᎳᏗ ᎠᏆᏤᎵ autonomic arousal ᎤᏩᎾᏕᏍᎩ. ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎤᏠᏱ ᎾᎬᏁᎲ ᎠᏁᏢᏔᏅᎯ ᎾᏍᎩ waking ᎠᎪᏩᏛᏗ – ᎠᎵᏤᎸᎮᏍᎩ arousing ᎤᎾᏒᎾᏍᏗᏱ ᎠᎴ ᏄᏁᎵᏒ – Ꮎ ᎢᏧᎳ don’t ᎢᏯᏛᏁᎯ ᎾᏍᎩ ᎾᎯᏳᎢ ᎢᏧᎳ ᎠᎴ ᎤᏰᏨᎩ. ᏌᏊ ᎢᏳᏩᎫᏗ aroused, ᎠᏆᏤᎵ ᎤᏅᏥᏓ ᎤᎭ ᎧᎵᏬᎯ Ꮎ ᎠᏓᏠᎯᏍᏗ arousal ᎠᎴ, ᎢᏳᏃ ᎢᏧᎳ don’t ᎧᎵᏬᎯ ᎾᏍᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏓᏎᎦᏤᏗ ᎡᎶᎯ, ᎢᏧᎳ ᎿᏛᎦ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎭᏫᎾᏗᏢ ᎠᏆᏤᎵ ᎠᏍᎩᏘᏍᏗ ᎦᎸᏗ. ᎯᎠ ᏧᎾᏟᎶᏍᏙᏗ arousal ᎠᎴ ᎤᏠᏱ ᎾᎬᏁᎲ ᏄᏛᏁᎸ atsinuqowisgv ᎠᎴ ᎾᎥᏂᎨᏍᏗ deactivated." (''ᎢᏤ ᎧᏃᎮᎸᏗ.'' ᎫᏬᏂ 12th pp44-47)    
+| publisher = HG Publishing
+}}</ref> Interviewed ᎾᎥᎢ ''ᎢᏤ ᎧᏃᎮᎸᏗ'' ᎾᏍᎩ ᎠᏍᎦᏯ ᏗᎪᏏᏌᏅᎯ ᎯᎳᎪ ᎤᏤᎵ ᎥᏩᏘᏍᎬ "ᎤᎾᏛᏁᎸᏗ Ꮎ ᏥᏭᏣᏔᏊ ᎠᏍᎩᏘᏍᏗ ᎦᎸᏗ ᎾᏛᏁ ᎡᏆ ᎦᏁᎸᎢ ᏧᎸᏫᏍᏓᏁᏗ ᎾᏍᎩᎾᎢ ᎢᏧᎳ ᎠᏴ. ᎠᏂᏏᏴᏫᎭ ᏒᏃᏱ ᎾᏍᎩ ᎠᏂᏲᎯᎭ ᎡᎳᏗ ᎠᏆᏤᎵ autonomic arousal ᎤᏩᎾᏕᏍᎩ. ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎤᏠᏱ ᎾᎬᏁᎲ ᎠᏁᏢᏔᏅᎯ ᎾᏍᎩ waking ᎠᎪᏩᏛᏗ – ᎠᎵᏤᎸᎮᏍᎩ arousing ᎤᎾᏒᎾᏍᏗᏱ ᎠᎴ ᏄᏁᎵᏒ – Ꮎ ᎢᏧᎳ don’t ᎢᏯᏛᏁᎯ ᎾᏍᎩ ᎾᎯᏳᎢ ᎢᏧᎳ ᎠᎴ ᎤᏰᏨᎩ. ᏌᏊ ᎢᏳᏩᎫᏗ aroused, ᎠᏆᏤᎵ ᎤᏅᏥᏓ ᎤᎭ ᎧᎵᏬᎯ Ꮎ ᎠᏓᏠᎯᏍᏗ arousal ᎠᎴ, ᎢᏳᏃ ᎢᏧᎳ don’t ᎧᎵᏬᎯ ᎾᏍᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏓᏎᎦᏤᏗ ᎡᎶᎯ, ᎢᏧᎳ ᎿᏛᎦ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎭᏫᎾᏗᏢ ᎠᏆᏤᎵ ᎠᏍᎩᏘᏍᏗ ᎦᎸᏗ. ᎯᎠ ᏧᎾᏟᎶᏍᏙᏗ arousal ᎠᎴ ᎤᏠᏱ ᎾᎬᏁᎲ ᏄᏛᏁᎸ ᎠᏥᏄᏉᏫᏍᎬ ᎠᎴ ᎾᎥᏂᎨᏍᏗ deactivated." (''ᎢᏤ ᎧᏃᎮᎸᏗ.'' ᎫᏬᏂ 12th pp44-47)    
 
-ᏅᎠᏯᏍᏗ ᎾᎥᎢ [[Michel Jouvet]] ᎤᏓᏎᎮᎸ Ꮎ ᎢᎦᏛ behaviours ᎠᎴ programmed ᎾᎯᏳᎨᏒ ᎯᎠ ᎬᏙᏗ ᎤᏔᏂᏗ ᎦᏙᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏲᎵ ᎠᎴ ᎯᎠ neonate. ᎪᎯ ᎨᏒᎢ ᎠᏎᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᎠᏚᎷᎳ ᎦᎸᏙᏗ ᎾᏍᎩᎾᎢ ᎦᏙ ᎤᏍᏗ ᎯᎠ gantlai ᎣᏂᏯᎨᏍᏙᏗ identifies ᎾᎥᏂᎨ ᎡᎵᏍᏗ ᎣᏓᏅᏛ ᏑᏓᎴᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᎯᏳ ᎾᏍᎩ ᎡᎶᎯ. ᎾᏍᎩ ᎯᎠ ᎾᎥᏂᎨ ᎡᎵᏍᏗ ᎦᎸᏙᏗ ᎠᏓᏁᏗ ᎡᎿᎢ ᎡᎥ ᎯᎠ ᏅᏏᎾᏒ ᎦᏬᎯᎵᏴᏍᏗ ᎯᎠ ᏄᏍᏗᏓᏅ ᎭᏫᎾᏗᏢ ᏩᏂᎨ ᎦᎶᎯᏍᏗ ᎠᎴ ᎠᏛᎯᏍᏙᏗ ᎯᎠ ᏅᏏᎾᏒ ᎠᏕᎶᏆᏍᏗ, ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ ᎣᏍᏛ ᏗᎦᏘᎸᏍᏗ.<ref>{{cite book
+ᏅᎠᏯᏍᏗ ᎾᎥᎢ [[Michel Jouvet]] ᎤᏓᏎᎮᎸ Ꮎ ᎢᎦᏛ behaviors ᎠᎴ programmed ᎾᎯᏳᎨᏒ ᎯᎠ ᎬᏙᏗ ᎤᏔᏂᏗ ᎦᏙᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏲᎵ ᎠᎴ ᎯᎠ neonate. ᎪᎯ ᎨᏒᎢ ᎠᏎᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᎠᏚᎷᎳ ᎦᎸᏙᏗ ᎾᏍᎩᎾᎢ ᎦᏙ ᎤᏍᏗ ᎯᎠ [[ᎦᏂᏝᎢ]] ᎣᏂᏯᎨᏍᏙᏗ identifies ᎾᎥᏂᎨ ᎡᎵᏍᏗ ᎣᏓᏅᏛ ᏑᏓᎴᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᎯᏳ ᎾᏍᎩ ᎡᎶᎯ. ᎾᏍᎩ ᎯᎠ ᎾᎥᏂᎨ ᎡᎵᏍᏗ ᎦᎸᏙᏗ ᎠᏓᏁᏗ ᎡᎿᎢ ᎡᎥ ᎯᎠ ᏅᏏᎾᏒ ᎦᏬᎯᎵᏴᏍᏗ ᎯᎠ ᏄᏍᏗᏓᏅ ᎭᏫᎾᏗᏢ ᏩᏂᎨ ᎦᎶᎯᏍᏗ ᎠᎴ ᎠᏛᎯᏍᏙᏗ ᎯᎠ ᏅᏏᎾᏒ ᎠᏕᎶᏆᏍᏗ, ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ ᎣᏍᏛ ᏗᎦᏘᎸᏍᏗ.<ref>{{cite book
 | last = Jouvet
 | first = M.
 | year = 1978
@@ -50,14 +47,14 @@
 | publisher = Elsevier
 }}</ref>  
 
-ᏓᎦᏘᎴᎬ ᏭᏎᎸ atsinuqowisgv Ꮎ ᏌᏊ ᏰᎵᏇ ᎠᎪᏩᏛᏗ ᎪᎯ ᏧᎵᎬᏩᎳᏅᎯ ᎯᎳᎪ ᎢᏳ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎤᏍᏗ ᎠᏯᏍᏗ atsinuqowisgv ᎠᎴ ᏗᏓᏲᎯᏍᏗ ᎾᎿ ᏂᎦᎥᏇ ᎤᏠᏱ – ᎾᎥᏂᎨ ᎡᎵᏍᏗ – ᏂᎯ, ᎾᏍᎩᏯᎢ ᎦᏰᏌᏛ ᎠᎴ ᎠᎹ ᎦᏄᎪᎬ ᎦᏅᏗ. ᏌᏊ ᎢᏳᏩᎫᏗ ᎣᏓᏅᏛ-ᎤᏱᎵᏒᎩ ᏗᏟᎶᏍᏙᏗ ᎨᏒᎢ activated ᎠᎴ ᏗᏙᎳᎩ utugi gvsv, ᎾᏍᎩ ᏰᎵᏇ ᏄᎶᏒᏍᏛᎾ ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᏋ deactivated ᎾᎥᎢ ᎯᎠ ᎤᏙᎯᏳᏒ ᎠᏫᏗᏍᎬ atsinuqowisgv ᎯᎠ programmed behaviour ᎾᎥᎢ ᎯᎠ ᎠᏰᎵ ᎤᏓᏅᏖᏗᏍᎩ iyahdvnelidasdi, ᎠᎴ ᎪᎯ ᏰᎵ ᏧᎸᏌᏓ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏓᏁᏗ ᎡᎿᎢ ᎡᎥ ᎯᎠ ᎦᏓᏆᎵ ᎤᏚᎳᏗ ᏄᎵᏍᏔᏅ ᏩᎵᏃᎯᏯᏍᎬ.
+ᏓᎦᏘᎴᎬ ᏭᏎᎸ ᎠᏥᏄᏉᏫᏍᎬ Ꮎ ᏌᏊ ᏰᎵᏇ ᎠᎪᏩᏛᏗ ᎪᎯ ᏧᎵᎬᏩᎳᏅᎯ ᎯᎳᎪ ᎢᏳ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎤᏍᏗ ᎠᏯᏍᏗ ᎠᏥᏄᏉᏫᏍᎬ ᎠᎴ ᏗᏓᏲᎯᏍᏗ ᎾᎿ ᏂᎦᎥᏇ ᎤᏠᏱ – ᎾᎥᏂᎨ ᎡᎵᏍᏗ – ᏂᎯ, ᎾᏍᎩᏯᎢ ᎦᏰᏌᏛ ᎠᎴ ᎠᎹ ᎦᏄᎪᎬ ᎦᏅᏗ. ᏌᏊ ᎢᏳᏩᎫᏗ ᎣᏓᏅᏛ-ᎤᏱᎵᏒᎩ ᏗᏟᎶᏍᏙᏗ ᎨᏒᎢ activated ᎠᎴ ᏗᏙᎳᎩ ᎤᏚᎩ ᎬᏒ, ᎾᏍᎩ ᏰᎵᏇ ᏄᎶᏒᏍᏛᎾ ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᏋ deactivated ᎾᎥᎢ ᎯᎠ ᎤᏙᎯᏳᏒ ᎠᏫᏗᏍᎬ ᎠᏥᏄᏉᏫᏍᎬ ᎯᎠ programmed behavior ᎾᎥᎢ ᎯᎠ ᎠᏰᎵ ᎤᏓᏅᏖᏗᏍᎩ [[system|ᎢᏯᏛᏁᎵᏓᏍᏗ]], ᎠᎴ ᎪᎯ ᏰᎵ ᏧᎸᏌᏓ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏓᏁᏗ ᎡᎿᎢ ᎡᎥ ᎯᎠ ᎦᏓᏆᎵ ᎤᏚᎳᏗ ᏄᎵᏍᏔᏅ ᏩᎵᏃᎯᏯᏍᎬ.
 
-"ᎠᎾᎵᏍᎪᎸᏘᏍᎬ ᎤᏣᏘᎾ ᎠᏥᎸ ᎦᏌᏙᏯᏍᎩ" ᎤᏠᏱᎭ ᎤᏲᏨᎯ ᎤᏔᎳᏬᏍᎬ, ᎠᎴ ᎢᏳᏃ ᎡᎿᎢ ᎡᎥ ᎨᏒᎩ ᎢᏯᏛᏁᎯ atsinuqowisgv ᎤᎾᏤᎵ ᎠᏓᏖᎸᏍᎬ ᏄᎵᏍᏛ ᏂᎦᎥᎢ iyuwakodi ᎤᏅᏌ ᎨᏒᎩ ᎠᎵᏤᎸᎮᏍᎩ aroused, Ꮎ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᎤᏐᏅᎢ. ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎡᎿᎢ ᎡᎥ ᎤᏚᎳᏗ ᏄᎵᏍᏔᏅ ᎠᏛᎯᏍᏙᏗ ᎯᎠ ᏅᏏᎾᏒ ᎤᎵᏍᎪᎸᏔᏅ arousals ᎯᎳᎪ ᎢᏳ ᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎠᎴ ᎠᎴᏫᏍᏙᏗ ᎠᏂ ᎣᏂᏯᎨᏍᏙᏗ ᎯᎳᎪ ᎢᏳ ᎤᏅᏌ ᏰᎵᏇ ᎿᏛᎦ Ꮭ ᎡᏍᎦ ᎢᎬᏁᎯ. ᏓᎦᏘᎴᎬ hypothesized Ꮎ Ꮎ ᎨᏒᎢ ᎦᏙᏃ ᎡᎿᎢ ᎡᎥ ᏚᏙᎳᏩᏛᎲ ᎠᏍᎩᏘᏍᏗ. ᎾᎯᏳᎨᏒ ᎬᏙᏗ ᎦᎸᏗ, ᎤᏄᎸᎲᏍᎩ ᎠᎵᏤᎸᎮᏍᎩ utugi dunvsv ᎠᎦᏍᎦᏂ ᎦᏬᎯᎸᏙᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎦ ᎠᎴ ᏗᏍᏆᎸᏙᏗ atsinuqowisgv ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᎾᎥᏂᎨ ᎡᎵᏍᏗ, ᎯᎠ ᎢᏴ deactivating ᎠᏂ ᎠᎴ ᎠᏎᏊᎢ ᎦᎸᎳᏗᏢ ᎯᎠ ᎤᏅᏥᏓ ᏗᏓᏅᏓᏁᏗᏱ ᎬᏙᏗ ᎯᎠ ᎢᏤ ᎠᎵᏤᎸᎮᏍᎩ arousing ᏂᏕᎦᎵᏍᏔᏂᏙᎲ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎢᎦ. ᏄᏠᏯᏍᏛᎾ ᏗᏍᎩᏘᏍᏗ ᎠᎧᎵᏐᏗ ᎡᎿᎢ ᎡᎥ' utugi dunvsv ᎾᎥᎢ ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎠᏂ atsinuqowisgv ᎤᏠᏱ ᎾᎬᏁᎲ, ᎠᎴ ᎾᎥᏂᎨᏍᏗ ᎤᏲᏨᎯ ᎯᎠ autonomic ᎤᏓᏅᏖᏗᏍᎩ iyahdvnelidasdi, ᎡᎿᎢ ᎡᎥ ᏯᏓᎢᏗᏏ ᎤᏚᎳᏗ ᎤᎪᏗᏗ ᎤᏔᏂᏗ ᎤᏅᏥᏓ.
+"ᎠᎾᎵᏍᎪᎸᏘᏍᎬ ᎤᏣᏘᎾ ᎠᏥᎸ ᎦᏌᏙᏯᏍᎩ" ᎤᏠᏱᎭ ᎤᏲᏨᎯ ᎤᏔᎳᏬᏍᎬ, ᎠᎴ ᎢᏳᏃ ᎡᎿᎢ ᎡᎥ ᎨᏒᎩ ᎢᏯᏛᏁᎯ ᎠᏥᏄᏉᏫᏍᎬ ᎤᎾᏤᎵ ᎠᏓᏖᎸᏍᎬ ᏄᎵᏍᏛ ᏂᎦᎥᎢ [[time|ᎢᏳᏩᎪᏗ]] ᎤᏅᏌ ᎨᏒᎩ ᎠᎵᏤᎸᎮᏍᎩ aroused, Ꮎ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᎤᏐᏅᎢ. ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎡᎿᎢ ᎡᎥ ᎤᏚᎳᏗ ᏄᎵᏍᏔᏅ ᎠᏛᎯᏍᏙᏗ ᎯᎠ ᏅᏏᎾᏒ ᎤᎵᏍᎪᎸᏔᏅ arousals ᎯᎳᎪ ᎢᏳ ᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎠᎴ ᎠᎴᏫᏍᏙᏗ ᎠᏂ ᎣᏂᏯᎨᏍᏙᏗ ᎯᎳᎪ ᎢᏳ ᎤᏅᏌ ᏰᎵᏇ ᎿᏛᎦ Ꮭ ᎡᏍᎦ ᎢᎬᏁᎯ. ᏓᎦᏘᎴᎬ hypothesized Ꮎ Ꮎ ᎨᏒᎢ ᎦᏙᏃ ᎡᎿᎢ ᎡᎥ ᏚᏙᎳᏩᏛᎲ ᎠᏍᎩᏘᏍᏗ. ᎾᎯᏳᎨᏒ ᎬᏙᏗ ᎦᎸᏗ, ᎤᏄᎸᎲᏍᎩ ᎠᎵᏤᎸᎮᏍᎩ ᎤᏚᎩ ᏚᏅᏒ ᎠᎦᏍᎦᏂ ᎦᏬᎯᎸᏙᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎦ ᎠᎴ ᏗᏍᏆᎸᏙᏗ ᎠᏥᏄᏉᏫᏍᎬ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᎾᎥᏂᎨ ᎡᎵᏍᏗ, ᎯᎠ ᎢᏴ deactivating ᎠᏂ ᎠᎴ ᎠᏎᏊᎢ ᎦᎸᎳᏗᏢ ᎯᎠ ᎤᏅᏥᏓ ᏗᏓᏅᏓᏁᏗᏱ ᎬᏙᏗ ᎯᎠ ᎢᏤ ᎠᎵᏤᎸᎮᏍᎩ arousing ᏂᏕᎦᎵᏍᏔᏂᏙᎲ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᎢᎦ. ᏄᏠᏯᏍᏛᎾ ᏗᏍᎩᏘᏍᏗ ᎠᎧᎵᏐᏗ ᎡᎿᎢ ᎡᎥ' ᎤᏚᎩ ᏚᏅᏒ ᎾᎥᎢ ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎠᏂ ᎠᏥᏄᏉᏫᏍᎬ ᎤᏠᏱ ᎾᎬᏁᎲ, ᎠᎴ ᎾᎥᏂᎨᏍᏗ ᎤᏲᏨᎯ ᎯᎠ autonomic ᎤᏓᏅᏖᏗᏍᎩ ᎢᏯᏛᏁᎵᏓᏍᏗ, ᎡᎿᎢ ᎡᎥ ᏯᏓᎢᏗᏏ ᎤᏚᎳᏗ ᎤᎪᏗᏗ ᎤᏔᏂᏗ ᎤᏅᏥᏓ.
 
-ᏓᎦᏘᎴᎬ ᎤᏤᎵ utugi gvsv fulfilment ᎪᎷᏩᏛᏗ ᏗᏍᎩᏘᏍᏗ ᎧᏃᎮᎭ Ꮎ:
-# ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎤᏠᏱ ᎾᎬᏁᎲ ᎠᏁᏢᏔᏅᎯ waking utugi dunvsv.
-# utugi dunvsv ᎦᏙ ᎤᏍᏗ ᏂᎬᏂᏏᏍᎬ ᎠᎵᏤᎸᎮᏍᎩ arousal Ꮎ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏄᏛᏁᎸ ᎾᏍᎩ ᎾᎯᏳᎨᏒ ᎯᎠ ᎢᎦ ᎤᏲᏨᎯ ᎯᎠ arousal, ᏗᏙᎳᎩ ᏗᏍᎩᏘᏍᏗ ᎾᎯᏳᎨᏒ ᎦᎸᏗ.
-# ᎢᏰᎵᏍᏗᎢ ᎠᎴᏫᏍᏙᏗ Ꮎ ᎠᎵᏤᎸᎮᏍᎩ arousal ᎾᎥᎢ ᎠᏍᏆᏗᏍᏗ ᎯᎠ utugi gvsv ᏗᏟᎶᏍᏙᏗ ᎤᏠᏱ ᎾᎬᏁᎲ, ᎠᏎᏊᎢ ᎯᎠ ᎤᏅᏥᏓ ᎦᏬᎯᎵᏴᏍᏗ ᏗᏍᏆᎸᏙᏗ ᎠᏂᏏᏴᏫᎭ ᎢᏤ ᎢᎦ.
+ᏓᎦᏘᎴᎬ ᎤᏤᎵ ᎤᏚᎩ ᎬᏒ fulfilment ᎪᎷᏩᏛᏗ ᏗᏍᎩᏘᏍᏗ ᎧᏃᎮᎭ Ꮎ:
+# ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎤᏠᏱ ᎾᎬᏁᎲ ᎠᏁᏢᏔᏅᎯ waking ᎤᏚᎩ ᏚᏅᏒ.
+# ᎤᏚᎩ ᏚᏅᏒ ᎦᏙ ᎤᏍᏗ ᏂᎬᏂᏏᏍᎬ ᎠᎵᏤᎸᎮᏍᎩ arousal Ꮎ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏄᏛᏁᎸ ᎾᏍᎩ ᎾᎯᏳᎨᏒ ᎯᎠ ᎢᎦ ᎤᏲᏨᎯ ᎯᎠ arousal, ᏗᏙᎳᎩ ᏗᏍᎩᏘᏍᏗ ᎾᎯᏳᎨᏒ ᎦᎸᏗ.
+# ᎢᏰᎵᏍᏗᎢ ᎠᎴᏫᏍᏙᏗ Ꮎ ᎠᎵᏤᎸᎮᏍᎩ arousal ᎾᎥᎢ ᎠᏍᏆᏗᏍᏗ ᎯᎠ ᎤᏚᎩ ᎬᏒ ᏗᏟᎶᏍᏙᏗ ᎤᏠᏱ ᎾᎬᏁᎲ, ᎠᏎᏊᎢ ᎯᎠ ᎤᏅᏥᏓ ᎦᏬᎯᎵᏴᏍᏗ ᏗᏍᏆᎸᏙᏗ ᎠᏂᏏᏴᏫᎭ ᎢᏤ ᎢᎦ.
 
 [[Arthur J. Deikman]] M. D., Clinical ᏗᏕᎶᏆᏍᎩ Psychiatry, ᏗᏕᎶᏆᏍᏗ California, ᏄᏍᏛ ᎧᏃᎮᎸ ᏓᎦᏘᎴᎬ ᎤᏤᎵ ᎪᎷᏩᏛᏗ ᏥᏄᏍᏗ "ᎤᏍᏆᏂᎪᏗᏳ ᎢᏤᎢ ᎠᎴ stimulating ᏗᎧᏃᏗᎢ ᎢᏰᎵᏍᏗᎢ, ᎠᏓᎴᏂᏍᎬ ᎠᎴ ᏴᏫ ᎤᏯᎾᏛᏁᏗ."<ref>{{cite book
 | last = Griffin, 
@@ -69,29 +66,29 @@ HG Publishing
 }}</ref>
 
 === ᎬᏗᏍᎬᎢ ᏗᏍᎩᏘᏍᏗ ᎭᏫᎾᏗᏢ therapy ===
-ᎯᎠ utugi gvsv fulfilment ᎪᎷᏩᏛᏗ ᏗᏍᎩᏘᏍᏗ ᎤᎭ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎤᏟ ᎢᎦᎢ ᏗᏙᎳᎩ ᎦᎶᎯᏍᏗ ᎬᏗᏍᎬᎢ ᎠᏍᎩᏘᏍᏗ ᎾᎥᏂᎨ ᎡᎵᏍᏗ ᎭᏫᎾᏗᏢ therapy. [[Human givens|ᏴᏫ ᎠᏓᏁᎸ]] therapists ᎣᎾᏛ Ꮎ ᎠᏍᎩᏘᏍᏗ ᎾᎥᏂᎨ ᎡᎵᏍᏗ Ꮎ ᏣᎦᏘᏲᏎᎯ ᎠᏲᎯᏍᏗ therapy ᎤᎭ ᎠᏅᏬᏗ ᏧᎬᏩᎶᏗ ᎢᎬᏂᏏᏍᎩ ᎤᏅᏌ ᏰᎵᏇ ᎢᏳᏓᎵᎭ ᎦᏂᏴᏗ ᏗᎬᏩᎶᏒ ᎯᎠ ᎾᎥᏂᎨ ᎡᎵᏍᏗ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎤᏓᏅᏖᏗᏍᎬ ᎤᎾᏤᎵ ᎤᏢᎩ. ᎤᏅᏌ ᏰᎵᏇ ᎾᎯᏳᎢ ᎠᎵᏍᏕᎸᏗ ᏣᎦᏘᏲᏎᎯ ᎠᎪᏩᏛᏗ ᎤᏟ ᎢᎦᎢ ᎤᏓᏎᎦᏤᏗ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ troubling ᎠᏂ. ᎧᏂᎬᎾᎥ ᏴᏫ ᎠᏍᎩᏘᏍᏗ ᎤᏟ ᎢᎦᎢ ᏂᎬᎢ ᎬᎾᏬᏍᎬ ᎬᏙᏗ-ᎧᏂᎬᎾᎥ ᏴᏫ, ᎠᎴ ᎯᎠ utugi gvsv fulfilment ᎪᎷᏩᏛᏗ ᏕᎪᏏᏏ ᎦᏙᏃ ᏓᎦᏘᎴᎬ ᎾᏍᎩ ᎾᏍᏇ ᎧᏁᎢᏍᏔᏅ Ꮎ [[hypnosis]] ᎨᏒᎢ ᎤᎪᏗᏗ ᎠᏏᎾᏌᏂ ᎧᏁᎢᏍᏔᏅᎯ ᏥᏄᏍᏗ ᎠᏓᏎᎮᏗ ᏫᏚᏳᎪᏛ activating ᎯᎠ ᎬᏙᏗ ᎤᏔᏂᏗ ᎦᏙᎯ, ᎠᎴ Ꮎ ᏂᎦᏛ ᎡᎷᏪᎢ phenomena ᏰᎵᏇ ᎾᏍᏋ ᏗᎪᏏᏌᏅᎯ ᎬᏙᏗ ᎪᎯ ᎥᎦᏔᎲᎢ.  ᎣᏂ ᏧᏩᎫᏛ ᎢᏰᎵᏍᏗᎢ ᎠᎴ ᎧᏁᎢᏍᏔᏅ ᏗᏁᎶᏗ ᏯᏛᎿ ᎤᎵᏍᎨᏛ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎭᏫᎾᏗᏢ psychotherapy, ᎪᎯ ᏯᏛᎾ ᎤᏙᎯᏳ ᎨᏒᎢ ᎡᏆ ᎦᏛᎬᎢ psychotherapists ᎠᎴ ᏗᏘᏲᎯᎯ.
+ᎯᎠ ᎤᏚᎩ ᎬᏒ fulfilment ᎪᎷᏩᏛᏗ ᏗᏍᎩᏘᏍᏗ ᎤᎭ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎤᏟ ᎢᎦᎢ ᏗᏙᎳᎩ ᎦᎶᎯᏍᏗ ᎬᏗᏍᎬᎢ ᎠᏍᎩᏘᏍᏗ ᎾᎥᏂᎨ ᎡᎵᏍᏗ ᎭᏫᎾᏗᏢ therapy. [[Human givens|ᏴᏫ ᎠᏓᏁᎸ]] therapists ᎣᎾᏛ Ꮎ ᎠᏍᎩᏘᏍᏗ ᎾᎥᏂᎨ ᎡᎵᏍᏗ Ꮎ ᏣᎦᏘᏲᏎᎯ ᎠᏲᎯᏍᏗ therapy ᎤᎭ ᎠᏅᏬᏗ ᏧᎬᏩᎶᏗ ᎢᎬᏂᏏᏍᎩ ᎤᏅᏌ ᏰᎵᏇ ᎢᏳᏓᎵᎭ ᎦᏂᏴᏗ ᏗᎬᏩᎶᏒ ᎯᎠ ᎾᎥᏂᎨ ᎡᎵᏍᏗ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎤᏓᏅᏖᏗᏍᎬ ᎤᎾᏤᎵ ᎤᏢᎩ. ᎤᏅᏌ ᏰᎵᏇ ᎾᎯᏳᎢ ᎠᎵᏍᏕᎸᏗ ᏣᎦᏘᏲᏎᎯ ᎠᎪᏩᏛᏗ ᎤᏟ ᎢᎦᎢ ᎤᏓᏎᎦᏤᏗ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ troubling ᎠᏂ. ᎧᏂᎬᎾᎥ ᏴᏫ ᎠᏍᎩᏘᏍᏗ ᎤᏟ ᎢᎦᎢ ᏂᎬᎢ ᎬᎾᏬᏍᎬ ᎬᏙᏗ-ᎧᏂᎬᎾᎥ ᏴᏫ, ᎠᎴ ᎯᎠ ᎤᏚᎩ ᎬᏒ fulfilment ᎪᎷᏩᏛᏗ ᏕᎪᏏᏏ ᎦᏙᏃ ᏓᎦᏘᎴᎬ ᎾᏍᎩ ᎾᏍᏇ ᎧᏁᎢᏍᏔᏅ Ꮎ [[hypnosis]] ᎨᏒᎢ ᎤᎪᏗᏗ ᎠᏏᎾᏌᏂ ᎧᏁᎢᏍᏔᏅᎯ ᏥᏄᏍᏗ ᎠᏓᏎᎮᏗ ᏫᏚᏳᎪᏛ activating ᎯᎠ ᎬᏙᏗ ᎤᏔᏂᏗ ᎦᏙᎯ, ᎠᎴ Ꮎ ᏂᎦᏛ ᎡᎷᏪᎢ phenomena ᏰᎵᏇ ᎾᏍᏋ ᏗᎪᏏᏌᏅᎯ ᎬᏙᏗ ᎪᎯ ᎥᎦᏔᎲᎢ.  ᎣᏂ ᏧᏩᎫᏛ ᎢᏰᎵᏍᏗᎢ ᎠᎴ ᎧᏁᎢᏍᏔᏅ ᏗᏁᎶᏗ ᏯᏛᎿ ᎤᎵᏍᎨᏛ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎭᏫᎾᏗᏢ psychotherapy, ᎪᎯ ᏯᏛᎾ ᎤᏙᎯᏳ ᎨᏒᎢ ᎡᏆ ᎦᏛᎬᎢ psychotherapists ᎠᎴ ᏗᏘᏲᎯᎯ.
 
 === ᎤᏁᎳᏅᎯ ᎠᎦᏘᏯ ᎪᎷᏩᏛᏗ ᏗᏍᎩᏘᏍᏗ ===
 
-ᎯᎠ ᎤᏍᏆᏂᎪᏗᏳ ᎠᎴ ᎢᏳᏓᎵᎭ ᏓᎦᏘᎴᎬ ᎤᏁᎳᏅ ᎤᏬᏢᏅ ᏗᏍᎩᏘᏍᏗ ᎤᎭ ᎤᏗᏅᏒᎩ ᎤᎪᏗᏗ ᎠᏁᎳᏙᏗ ᏗᏍᎩᏘᏍᏗ ᏥᏄᏍᏗ ᏩᎦᎸᎳᏗᏴ ᏗᏓᏁᏗ ᎠᎴ ᎨᏥᏃᎯᏎᏗ, ᏥᏄᏍᏗ utugi gvsv ᎯᎠ ᎤᏩᎫᏗᏗᏒ, ᎠᎴ ᏥᏄᏍᏗ ᎨᏥᏃᎯᏎᏗ ᏂᏛᎴᏅᏓ ᎯᎠ tsuqagutanvsv.  ᏅᎪᏢᎯᏐᏗᏱ, ᎯᎠ ᎠᏓᏅᏖᏗ ᎯᎠ "ᎠᏍᎩᏘᏍᏗ ᎡᎶᎯ" ᏥᏄᏍᏗ ᎤᏙᎯᏳ ᎾᏍᎩ ᎠᎴ ᎯᎠ "ᎢᎦ ᎡᎶᎯ" ᏥᏄᏍᏗ ᏁᎵᏒᎢ ᎨᏒᎢ ᏄᏓᎴ ᎤᏁᎳᏅᎯ ᎠᎦᏘᏯ ᎪᎷᏩᏛᏗ ᏗᏍᎩᏘᏍᏗ.  ᏭᏓᎪᎾᏛ ᏗᏍᎩᏘᏍᏗ ᎤᏬᎯᏳᏅ ᎤᎭ ᏭᏪᏙᎢ ᎠᏓᏅᏒ ᎾᎥᎢ ᎤᏁᎳᏅᎯ ᎠᎦᏘᏯ ᎤᎭ ᎤᏗᏅᏒᎩ [[conversion|ᏧᎾᏍᏗ]]ᏂᏛᎴᏅᏓ ᏌᏊ [[religion|ᏗᏁᎸᏙᏗ]] ᏄᏓᎴ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ ᏂᏛᎴᏅᏓ [[Islam]] [[Christianity|ᏚᏳᎪᏛ]], ᎠᎴ ''ᏔᎵᏁ ᎠᏓᎴᏁ versa.'' {{fact}} 
+ᎯᎠ ᎤᏍᏆᏂᎪᏗᏳ ᎠᎴ ᎢᏳᏓᎵᎭ ᏓᎦᏘᎴᎬ ᎤᏁᎳᏅ ᎤᏬᏢᏅ ᏗᏍᎩᏘᏍᏗ ᎤᎭ ᎤᏗᏅᏒᎩ ᎤᎪᏗᏗ ᎠᏁᎳᏙᏗ ᏗᏍᎩᏘᏍᏗ ᏥᏄᏍᏗ ᏩᎦᎸᎳᏗᏴ ᏗᏓᏁᏗ ᎠᎴ ᎨᏥᏃᎯᏎᏗ, ᏥᏄᏍᏗ ᎤᏚᎩ ᎬᏒ ᎯᎠ ᎤᏩᎫᏗᏗᏒ, ᎠᎴ ᏥᏄᏍᏗ ᎨᏥᏃᎯᏎᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᏧᏩᏓᏔᏅᏒ.  ᏅᎪᏢᎯᏐᏗᏱ, ᎯᎠ ᎠᏓᏅᏖᏗ ᎯᎠ "ᎠᏍᎩᏘᏍᏗ ᎡᎶᎯ" ᏥᏄᏍᏗ ᎤᏙᎯᏳ ᎾᏍᎩ ᎠᎴ ᎯᎠ "ᎢᎦ ᎡᎶᎯ" ᏥᏄᏍᏗ ᏁᎵᏒᎢ ᎨᏒᎢ ᏄᏓᎴ ᎤᏁᎳᏅᎯ ᎠᎦᏘᏯ ᎪᎷᏩᏛᏗ ᏗᏍᎩᏘᏍᏗ.  ᏭᏓᎪᎾᏛ ᏗᏍᎩᏘᏍᏗ ᎤᏬᎯᏳᏅ ᎤᎭ ᏭᏪᏙᎢ ᎠᏓᏅᏒ ᎾᎥᎢ ᎤᏁᎳᏅᎯ ᎠᎦᏘᏯ ᎤᎭ ᎤᏗᏅᏒᎩ [[conversion|ᏧᎾᏍᏗ]] ᏂᏛᎴᏅᏓ ᏌᏊ [[religion|ᏗᏁᎸᏙᏗ]] ᏄᏓᎴ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ ᏂᏛᎴᏅᏓ [[Islam]] [[Christianity|ᏚᏳᎪᏛ]], ᎠᎴ ''ᏔᎵᏁ vice versa.''
 
-[[Oneiromancy|ᏗᎦᏃᏣᎳᏅ]], utugi gvsv ᎯᎠ ᎤᏩᎫᏗᏗᏒ ᏗᎬᏩᎶᏒ ᎯᎠ ᎪᎷᏩᏛᏗ ᏗᏍᎩᏘᏍᏗ, ᏗᏂᏂᏴ ᎡᏆ ᎤᏬᎯᏳᏒ ᎭᏫᎾᏗᏢ ᎯᎸᎯᏳᎢ [[Judeo-Christianity|Judeo-ᏚᏳᎪᏛ]]: ᎭᏫᎾᏗᏢ ᎯᎠ [[Tanakh]], [[Jacob]], [[Joseph (Hebrew Bible)|ᏧᏳᎪᏗᎭ]] ᎠᎴ [[Daniel]] ᎠᎴ ᎠᏓᏁᎸ ᎯᎠ ᏅᏏᎾᏒ ᎠᏁᎳᏙᏗ ᏗᏍᎩᏘᏍᏗ ᎾᎥᎢ [[Yahweh]]; ᎭᏫᎾᏗᏢ ᎯᎠ [[New Testament|ᎢᏤ ᎢᏤ ᎧᏃᎮᏛ]], ᏩᎦᎸᎳᏗᏴ ᎠᏓᎵᎦᎵᏍᏗᏍᎩ ᎦᎷᎦ ᏥᏄᏍᏗ ᎠᏍᎩᏘᏍᏗ [[Saint Joseph|ᎾᏍᎦᏅᏅᎠ ᏧᏳᎪᏗᎭ]], ᎯᎠ asgahah aninela [[Mary, the mother of Jesus|Mary]], ᎯᎳᎪ ᎢᏳ ᎯᎠ [[Angel Gabriel|ᎠᏂᏓᏪᎯ Gabriel]] ᎤᏁᏨ ᎾᏍᎩ ᎠᏍᎦᏯ ᎭᏫᎾᏗᏢ ᎠᏍᎩᏘᏍᏗ ᎠᎴ ᎤᏃᎮᎴᎢ ᎾᏍᎩ ᎠᏍᎦᏯ Ꮎ ᎯᎠ ᎤᏍᏗ Mary ᏥᏄᏍᏛᎩ ᎠᏫᏗᏍᎬ ᏥᏄᏍᏛᎩ ᎯᎠ [[Jesus|ᎤᏪᏥ  ᎤᏁᎳᏅᎯ]]. ᎤᎶᏐᏅ ᎯᎠ ᎠᏓᏩᏛᎯᏓᏍᏗ ᎯᎠ [[Magi|ᏦᎢ ᎠᎦᏔᎾᎯ ansigaya]] ᎠᏂ ᎭᏫᎾᏗᏢ [[Bethlehem]], [[angel|ᎠᏂᏓᏪᎯ]] ᎤᎾᏄᎪᏨ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᎴ ᎤᏃᎮᎴᎢ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᎩᏍᏗ Mary ᎠᎴ [[Jesus|ᏥᏌ]] [[Egypt]] ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᏄᎾᏰᎯᏍᏛᎾ. ᎯᎠ ᎠᏂᏓᏪᎯ ᎤᎾᏄᎪᏨ ᎠᏏᏇ ᎭᏫᎾᏗᏢ ᎠᏍᎩᏘᏍᏗ ᏚᎵᏃᎮᎸ ᎾᏍᎩ ᎠᏍᎦᏯ ᎯᎳᎪ ᎢᏳ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᏂᎦᎾᏰᎬᎾ ᎥᎦᎷᏨ [[Israel]]. ᎯᎠ ᎧᏃᎮᎸᏍᎩ [[Saint Patrick|ᎾᏍᎦᏅᏅᎠ Patrick]] ᎠᎴ ᎤᏤᎵ ᏧᎾᏍᏗ ᎯᎠ ᏴᏫ [[Ireland]] ᎾᏍᎩ ᎾᏍᏇ ᏄᏍᏛ ᏗᎨᎦᏃᏗ ᎢᏰᎵᏍᏗᎢ. ᎯᎳᎪ ᎢᏳ Patrick ᏥᏄᏍᏛᎩ ᏗᎨᏥᎾᏝᎢ ᎭᏫᎾᏗᏢ [[Antrim]] ᎾᏍᎩ ᎠᏍᎦᏯ ᏥᏄᏍᏛᎩ ᎤᏃᎮᎴᎢ ᎾᎥᎢ [[God|ᎤᏁᎳᏅᎯ]] ᎭᏫᎾᏗᏢ ᎠᏍᎩᏘᏍᏗ Ꮎ ᎾᎿᎢ ᏥᏄᏍᏛᎩ ᏥᏳ ᎠᎦᏘᏴ ᎭᏫᎾᏗᏢ [[Wicklow]] ᎠᏲᎯᏍᏗ ᎾᏍᎩ ᎠᏍᎦᏯ ᎦᏐᎯ ᎤᏤᎵ homeland. ᎢᎦᏛ ᏧᏕᏘᏴᏓ ᎣᏂᏯᎨᏍᏙᏗ Patrick dreamt Ꮎ ᎯᎠ ᎦᏁᎳ ᎨᏒᎩ ᏓᏯᏂᏍᎬ ᎾᏍᎩ ᎠᏍᎦᏯ ᎥᎦᎷᏨ ᎠᎴ ᎤᎧᏛ ᎠᏂ [[Christianity|ᏚᏳᎪᏛ]].
+[[Oneiromancy|ᏗᎦᏃᏣᎳᏅ]], ᎤᏚᎩ ᎬᏒ ᎯᎠ ᎤᏩᎫᏗᏗᏒ ᏗᎬᏩᎶᏒ ᎯᎠ ᎪᎷᏩᏛᏗ ᏗᏍᎩᏘᏍᏗ, ᏗᏂᏂᏴ ᎡᏆ ᎤᏬᎯᏳᏒ ᎭᏫᎾᏗᏢ ᎯᎸᎯᏳᎢ [[Judeo-Christianity|Judeo-ᏚᏳᎪᏛ]]: ᎭᏫᎾᏗᏢ ᎯᎠ [[Tanakh]], [[Jacob]], [[Joseph (Hebrew Bible)|ᏧᏳᎪᏗᎭ]] ᎠᎴ [[Daniel]] ᎠᎴ ᎠᏓᏁᎸ ᎯᎠ ᏅᏏᎾᏒ ᎠᏁᎳᏙᏗ ᏗᏍᎩᏘᏍᏗ ᎾᎥᎢ [[Yahweh]]; ᎭᏫᎾᏗᏢ ᎯᎠ [[New Testament|ᎢᏤ ᎧᏃᎮᏛ]], ᏩᎦᎸᎳᏗᏴ ᎠᏓᎵᎦᎵᏍᏗᏍᎩ ᎦᎷᎦ ᏥᏄᏍᏗ ᎠᏍᎩᏘᏍᏗ [[Saint Joseph|ᎾᏍᎦᏅᏅᎠ ᏧᏳᎪᏗᎭ]], ᎯᎠ ᎠᏍᎦᎭ ᎠᏂᏁᎳ [[Mary, the mother of Jesus|ᎺᎵ]], ᎯᎳᎪ ᎢᏳ ᎯᎠ [[Angel Gabriel|ᎠᏂᏓᏪᎯ Gabriel]] ᎤᏁᏨ ᎾᏍᎩ ᎠᏍᎦᏯ ᎭᏫᎾᏗᏢ ᎠᏍᎩᏘᏍᏗ ᎠᎴ ᎤᏃᎮᎴᎢ ᎾᏍᎩ ᎠᏍᎦᏯ Ꮎ ᎯᎠ ᎤᏍᏗ Mary ᏥᏄᏍᏛᎩ ᎠᏫᏗᏍᎬ ᏥᏄᏍᏛᎩ ᎯᎠ [[Jesus|ᎤᏪᏥ  ᎤᏁᎳᏅᎯ]]. ᎤᎶᏐᏅ ᎯᎠ ᎠᏓᏩᏛᎯᏓᏍᏗ ᎯᎠ [[Magi|ᏦᎢ ᎠᎦᏔᎾᎯ ᎠᏂᏍᎦᏯ]] ᎠᏂ ᎭᏫᎾᏗᏢ [[Bethlehem]], [[angel|ᎠᏂᏓᏪᎯ]] ᎤᎾᏄᎪᏨ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᎴ ᎤᏃᎮᎴᎢ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᎩᏍᏗ Mary ᎠᎴ [[Jesus|ᏥᏌ]] [[Egypt]] ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᏄᎾᏰᎯᏍᏛᎾ. ᎯᎠ ᎠᏂᏓᏪᎯ ᎤᎾᏄᎪᏨ ᎠᏏᏇ ᎭᏫᎾᏗᏢ ᎠᏍᎩᏘᏍᏗ ᏚᎵᏃᎮᎸ ᎾᏍᎩ ᎠᏍᎦᏯ ᎯᎳᎪ ᎢᏳ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᏂᎦᎾᏰᎬᎾ ᎥᎦᎷᏨ [[Israel]]. ᎯᎠ ᎧᏃᎮᎸᏍᎩ [[Saint Patrick|ᎾᏍᎦᏅᏅᎠ Patrick]] ᎠᎴ ᎤᏤᎵ ᏧᎾᏍᏗ ᎯᎠ ᏴᏫ [[Ireland]] ᎾᏍᎩ ᎾᏍᏇ ᏄᏍᏛ ᏗᎨᎦᏃᏗ ᎢᏰᎵᏍᏗᎢ. ᎯᎳᎪ ᎢᏳ Patrick ᏥᏄᏍᏛᎩ ᏗᎨᏥᎾᏝᎢ ᎭᏫᎾᏗᏢ [[Antrim]] ᎾᏍᎩ ᎠᏍᎦᏯ ᏥᏄᏍᏛᎩ ᎤᏃᎮᎴᎢ ᎾᎥᎢ [[God|ᎤᏁᎳᏅᎯ]] ᎭᏫᎾᏗᏢ ᎠᏍᎩᏘᏍᏗ Ꮎ ᎾᎿᎢ ᏥᏄᏍᏛᎩ ᏥᏳ ᎠᎦᏘᏴ ᎭᏫᎾᏗᏢ [[Wicklow]] ᎠᏲᎯᏍᏗ ᎾᏍᎩ ᎠᏍᎦᏯ ᎦᏐᎯ ᎤᏤᎵ homeland. ᎢᎦᏛ ᏧᏕᏘᏴᏓ ᎣᏂᏯᎨᏍᏙᏗ Patrick dreamt Ꮎ ᎯᎠ ᎦᏁᎳ ᎨᏒᎩ ᏓᏯᏂᏍᎬ ᎾᏍᎩ ᎠᏍᎦᏯ ᎥᎦᎷᏨ ᎠᎴ ᎤᎧᏛ ᎠᏂ [[Christianity|ᏚᏳᎪᏛ]].
 
-ᎭᏫᎾᏗᏢ [[Islam]], ᎣᏍᏛ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎠᎦᏎᏍᏔᏅ ᎾᏍᏋ ᏂᏛᎴᏅᏓ [[God|ᎤᏁᎳᏅᎯ]] ᎠᎴ ᎤᏲᎢ ᏗᏍᎩᏘᏍᏗ ᏂᏛᎴᏅᏓ [[Satan|ᏨᏍᎩᎾ]] [http://www.islamonline.net/servlet/Satellite?pagename=IslamOnline-English-Ask_Scholar/FatwaE/FatwaE&cid=1119503546124].
+ᎭᏫᎾᏗᏢ [[Islam]], ᎣᏍᏛ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎠᎦᏎᏍᏔᏅ ᎾᏍᏋ ᏂᏛᎴᏅᏓ [[God|ᎤᏁᎳᏅᎯ]] ᎠᎴ ᎤᏲᎢ ᏗᏍᎩᏘᏍᏗ ᏂᏛᎴᏅᏓ [[Satan|ᏨᏍᎩᎾ]].<ref>[http://www.islamonline.net/servlet/Satellite?pagename=IslamOnline-English-Ask_Scholar/FatwaE/FatwaE&cid=1119503546124 Islam Online].</ref>
 
-[[Western world|ᏭᏕᎵᎬᏗᏢ]] [[philosopher|ᏗᏕᎶᏆᏍᎩ]][[scepticism|sceptical]] ᎤᏣᏍᏈᏗ (ᏂᎬᎢ [[René Descartes]]) ᎤᎭ ᏭᏎᎸ atsinuqowisgv Ꮎ ᎠᏍᎩᏘᏍᏗ unigatohvsv ᎠᎴ ᎢᏗᎦᏘᎭ ᏂᏛᎴᏅᏓ "ᎤᏙᎯᏳ ᎾᏍᎩ" ᏂᏕᎦᎵᏍᏔᏂᏙᎲ ᏂᏛᎴᏅᏓ ᎯᎠ viewpoint ᎯᎠ ᎤᎿᎸ ᎠᏍᎦᏯ, ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮭ ᎤᏓᏎᎦᏤᏗ ᎠᎴᏅᏙᏗ ᎬᏂᎨᏒ ᏂᏚᏍᏗ ᎾᏍᎩᎾᎢ determining ᎢᏳᏃ ᏌᏊ ᎨᏒᎢ ᎢᏰᎵᏍᏗᎢ ᎠᎴ ᎤᏰᏨᎩ ᎾᎾᎢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎠᏓᏁᎸ ᏄᎵᏍᏛ.  ᏌᏊ ᎠᏎ, ᎤᏅᏌ ᎠᏘᏲᎯᎭ, ᏗᏓᏂᎸᎢᏍᏗ ᎯᎠ ᎤᏙᎯᏳ ᏄᏍᏛ ᎯᎠ waking ᎡᎶᎯ ᎾᎿ ᎯᎠ ᎠᎴᏅᏙᏗ ᎪᎯᏳᏗ.<br />
-[[Scientific evidence|ᎠᏏᎾᏍᏛ ᎪᎯᏳᏙ]] ᎾᎿ [[lucid dreaming|ᎠᏨᏍᏛ ᎢᏰᎵᏍᏗᎢ]] ᏓᏓᏁᎳᏁ ᏗᏎᎯᎯ-ᏗᎪᏏᏐᏗ ᎪᎯ ᎪᎷᏩᏛᏗ ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[1980s]] ᎠᏨᏍᏛ ᎤᎿᎸ ᎠᏍᎦᏯ ᎨᏒᎩ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎠᏓᏃᎮᏗ researchers Ꮎ ᎤᏅᏌ ᎨᏒᎩ ᎠᏕᎶᎰᏍᎩ gayatohvsdi ᎠᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᎠᏍᎩᏘᏍᏗ ᎤᏔᏂᏗ ᎦᏙᎯ ᎾᎥᎢ ᎬᏗᏍᎬᎢ [[eye movement|agatoli ᎠᏓᏅᏏᏙᎠ]] ᏂᎬᎢ[http://web.archive.org/web/20050213195023/http://www.stanford.edu/~mgoldens/lab/psyphy_lucidity.html][http://www.susanblackmore.co.uk/Articles/si91ld.html].
+[[Western world|ᏭᏕᎵᎬᏗᏢ]] [[philosopher|ᏗᏕᎶᏆᏍᎩ]] [[scepticism|sceptical]] ᎤᏣᏍᏈᏗ (ᏂᎬᎢ [[René Descartes]]) ᎤᎭ ᏭᏎᎸ ᎠᏥᏄᏉᏫᏍᎬ Ꮎ ᎠᏍᎩᏘᏍᏗ unigatohvsv ᎠᎴ ᎢᏗᎦᏘᎭ ᏂᏛᎴᏅᏓ "ᎤᏙᎯᏳ ᎾᏍᎩ" ᏂᏕᎦᎵᏍᏔᏂᏙᎲ ᏂᏛᎴᏅᏓ ᎯᎠ viewpoint ᎯᎠ ᎤᎿᎸ ᎠᏍᎦᏯ, ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮭ ᎤᏓᏎᎦᏤᏗ ᎠᎴᏅᏙᏗ ᎬᏂᎨᏒ ᏂᏚᏍᏗ ᎾᏍᎩᎾᎢ determining ᎢᏳᏃ ᏌᏊ ᎨᏒᎢ ᎢᏰᎵᏍᏗᎢ ᎠᎴ ᎤᏰᏨᎩ ᎾᎾᎢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎠᏓᏁᎸ ᏄᎵᏍᏛ.  ᏌᏊ ᎠᏎ, ᎤᏅᏌ ᎠᏘᏲᎯᎭ, ᏗᏓᏂᎸᎢᏍᏗ ᎯᎠ ᎤᏙᎯᏳ ᏄᏍᏛ ᎯᎠ waking ᎡᎶᎯ ᎾᎿ ᎯᎠ ᎠᎴᏅᏙᏗ ᎪᎯᏳᏗ.<br />
+[[Scientific evidence|ᎠᏏᎾᏍᏛ ᎪᎯᏳᏙ]] ᎾᎿ [[lucid dreaming|ᎠᏨᏍᏛ ᎢᏰᎵᏍᏗᎢ]] ᏓᏓᏁᎳᏁ ᏗᏎᎯᎯ-ᏗᎪᏏᏐᏗ ᎪᎯ ᎪᎷᏩᏛᏗ ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ 1980s ᎠᏨᏍᏛ ᎤᎿᎸ ᎠᏍᎦᏯ ᎨᏒᎩ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎠᏓᏃᎮᏗ researchers Ꮎ ᎤᏅᏌ ᎨᏒᎩ ᎠᏕᎶᎰᏍᎩ ᎨᏯᏙᎲᏍᏗ ᎠᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᎠᏍᎩᏘᏍᏗ ᎤᏔᏂᏗ ᎦᏙᎯ ᎾᎥᎢ ᎬᏗᏍᎬᎢ [[eye movement|ᎠᎦᏙᎵ ᎠᏓᏅᏏᏙᎠ]] ᏂᎬᎢ.<ref>[http://web.archive.org/web/20050213195023/http://www.stanford.edu/~mgoldens/lab/psyphy_lucidity.html][http://www.susanblackmore.co.uk/Articles/si91ld.html]</ref>
 
 === Psychodynamic ᎪᎷᏩᏛᏗ ᏗᏍᎩᏘᏍᏗ ===
 :''ᏄᎬᏫᏳᏒ ᎤᏓᏡᎬ: [[Dream interpretation|ᎠᏍᎩᏘᏍᏗ ᎪᎷᏩᏛᏗ]]''
 
-ᎢᏧᎳ [[Sigmund Freud]] ᎠᎴ [[Carl Jung]] ᎠᏓᏙᎯᏙᏗ ᏗᏍᎩᏘᏍᏗ ᏥᏄᏍᏗ ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎠᏰᎵ ᎯᎠ [[unconscious|ᎾᏕᎶᎰᏍᎬᎾ]] ᎠᎴ ᎯᎠ [[conscious|ᎠᏕᎶᎰᏍᎩ]]. ᎤᏅᏌ ᎾᏍᎩ ᎾᏍᏇ ᎧᏁᎢᏍᏗᏱ ᎢᏧᎳ Ꮎ ᎾᏕᎶᎰᏍᎬᎾ ᎨᏒᎢ ᎯᎠ ᎾᏓᏛᏂᏌᏁᎲ ᎦᏌᏙᏯᏍᏗ ᎯᎠ ᎠᏍᎩᏘᏍᏗ, ᎠᎴ ᎭᏫᎾᏗᏢ ᏗᏍᎩᏘᏍᏗ ᎾᏍᎩ ᏩᏓᏁᏗᏱ Ꮝ ᎣᏤᎵ ᎠᏓᏅᏖᏗᏱ ᎠᎵᏂᎬᏁᏗᎢ ᎯᎠ ᎠᏒᎾᏍᏗᏱ ᏗᎾᏕᏲᎲᏍᎩ. ᎾᎯᏳᎢ Freud ᎤᏒᏂᎸ Ꮎ ᎾᎿᎢ ᏥᏄᏍᏛᎩ lyadvnehi censorship ᏗᎦᏘᎴᎩ ᎯᎠ ᎾᏕᎶᎰᏍᎬᎾ ᎢᏧᎳᎭ ᎾᎯᏳᎨᏒ ᎦᎸᏗ, Jung argued Ꮎ ᎯᎠ ᎠᏍᎩᏘᏍᏗ ᎤᏤᎵ ᏓᎦᏘᎴᎬ ᎢᎦ ᎣᏏ ᎨᏒᎢ ᎠᏏᎾᏍᏛ ᎦᏬᏂᎯᏍᏗ, ᎠᎾᎵᏐᏈᎸᏍᎬ ᎠᏟᎶᏍᏗ ᎠᎴ ᏧᏓᎴᎿᎢ ᏰᎵᏇ ᎢᎬᏁᏗ ''agatudesdi'' ᎯᎠ underlying ᎦᏛᎬᎢ.
+ᎢᏧᎳ [[Sigmund Freud]] ᎠᎴ [[Carl Jung]] ᎠᏓᏙᎯᏙᏗ ᏗᏍᎩᏘᏍᏗ ᏥᏄᏍᏗ ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎠᏰᎵ ᎯᎠ [[unconscious|ᎾᏕᎶᎰᏍᎬᎾ]] ᎠᎴ ᎯᎠ [[conscious|ᎠᏕᎶᎰᏍᎩ]]. ᎤᏅᏌ ᎾᏍᎩ ᎾᏍᏇ ᎧᏁᎢᏍᏗᏱ ᎢᏧᎳ Ꮎ ᎾᏕᎶᎰᏍᎬᎾ ᎨᏒᎢ ᎯᎠ ᎾᏓᏛᏂᏌᏁᎲ ᎦᏌᏙᏯᏍᏗ ᎯᎠ ᎠᏍᎩᏘᏍᏗ, ᎠᎴ ᎭᏫᎾᏗᏢ ᏗᏍᎩᏘᏍᏗ ᎾᏍᎩ ᏩᏓᏁᏗᏱ Ꮝ ᎣᏤᎵ ᎠᏓᏅᏖᏗᏱ ᎠᎵᏂᎬᏁᏗᎢ ᎯᎠ ᎠᏒᎾᏍᏗᏱ ᏗᎾᏕᏲᎲᏍᎩ. ᎾᎯᏳᎢ Freud ᎤᏒᏂᎸ Ꮎ ᎾᎿᎢ ᏥᏄᏍᏛᎩ ᎢᏯᏛᏁᎯ censorship ᏗᎦᏘᎴᎩ ᎯᎠ ᎾᏕᎶᎰᏍᎬᎾ ᎢᏧᎳᎭ ᎾᎯᏳᎨᏒ ᎦᎸᏗ, Jung argued Ꮎ ᎯᎠ ᎠᏍᎩᏘᏍᏗ ᎤᏤᎵ ᏓᎦᏘᎴᎬ ᎢᎦ ᎣᏏ ᎨᏒᎢ ᎠᏏᎾᏍᏛ ᎦᏬᏂᎯᏍᏗ, ᎠᎾᎵᏐᏈᎸᏍᎬ ᎠᏟᎶᏍᏗ ᎠᎴ ᏧᏓᎴᎿᎢ ᏰᎵᏇ ᎢᎬᏁᏗ ''ᎠᎦᏚᏕᏍᏗ'' ᎯᎠ underlying ᎦᏛᎬᎢ.
 [[Fritz Perls]] ᎤᏓᏁᎸᎩ ᎤᏤᎵ ᎪᎷᏩᏛᏗ ᏗᏍᎩᏘᏍᏗ ᎠᏍᏓᏩᏗᏒ ᎯᎠ holistic ᎤᏁᎳᏅ ᎤᏬᏢᏅ gestalt therapy. ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎠᎪᎲᎢ ᏥᏄᏍᏗ ᎠᎴᏂᏙᎲ ᏂᎯ ᎢᎦᏛᎭ ᎬᏂᎨᏒ ᏄᏍᏛᎢ. ᎢᏳᏓᎵᎭ ᎾᏍᎩ ᎯᎠ ᎠᎴ ᎢᎦᏛᎭ Ꮎ ᎤᎭ ᏭᏪᏙᎢ ignored, ᎠᏓᏯᏍᏗ ᎠᎴ ᎢᏧᎳᎭ suppressed. ᏌᏊ ᎠᎵᏐᏍᏛ gestalt ᎠᏍᎩᏘᏍᏗ ᏗᎫᎪᏙᏗ ᎢᎬᏁᏗ ᎨᏒᎢ ᏗᏓᏂᎸᎢᏍᏗ ᎠᎴ reintegrate ᎾᏍᎩ ᎯᎠ.
-ᎯᎠ ᎠᏍᎩᏘᏍᏗ ᎤᏚᎸᏗ ᏄᎾᏛᏅ ᎾᏍᏋ accepted ᎭᏫᎾᏗᏢ Ꮝ ᎣᏤᎵ ᏚᏳᎪᏛ - ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏲᏨᎯ ᎡᎳᏗ ᎠᎴ analysed atsinuqowisgv ᎬᏂᎨᏒ ᏄᏍᏛᎢ.
+ᎯᎠ ᎠᏍᎩᏘᏍᏗ ᎤᏚᎸᏗ ᏄᎾᏛᏅ ᎾᏍᏋ accepted ᎭᏫᎾᏗᏢ Ꮝ ᎣᏤᎵ ᏚᏳᎪᏛ - ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏲᏨᎯ ᎡᎳᏗ ᎠᎴ analyzed ᎠᏥᏄᏉᏫᏍᎬ ᎬᏂᎨᏒ ᏄᏍᏛᎢ.
 
 === ᎤᏙᏢᏒ ᏗᏍᎩᏘᏍᏗ ===
 
-ᎾᎿᎢ ᎨᏒᎢ Ꮭ ᎢᎬᏩᎾᏓᎴᎩ ᏚᏓᏂᎸᏨ-ᎾᏍᎩ biological ᏩᏎᏍᏗ ᎾᎿ ᎢᏰᎵᏍᏗᎢ.  ᎯᎠ ᎤᏬᎯᏳᏒ ᎧᏃᎮᎭ Ꮎ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ [[REM sleep|ᎬᏙᏗ ᎦᎸᏗ]] ᎠᎴ ᎯᎠ ᎪᎯᏳᏙ ᎾᏍᎩᎾᎢ ᎪᎯ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎳᏂᎩᏓ.  ᎢᏳᏍᏗ ᏗᎧᏃᎮᏗ awakened ᎾᎯᏳᎨᏒ ᎬᏙᏗ ᎦᎸᏗ ᎤᏠᏱᎭ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎤᎲᎢ ᏭᏪᏙᎢ ᎢᏰᎵᏍᏗᎢ ᎠᎴ ᎣᏂ ᏧᏩᎫᏛ ᎬᏙᏗ ᎦᎸᏗ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏥᏄᏍᏗ ᎠᏍᏛᎩ ᏥᏄᏍᏗ ᎬᏙᏗ-ᎬᏙᏗ ᎦᎸᏗ, ᎾᏍᎩ ᏯᏓᎢᏗᏏ ᎾᏍᏋ utugi uwasv Ꮎ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎤᏟ ᎢᏲᏍᏛ ᎠᏅᏓᏛᎯ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏎᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎤᏟ ᎢᎦᎢ ᏧᏣᏔᏊ ᎾᎯᏳᎨᏒ ᎬᏙᏗ ᎦᎸᏗ.  ᎢᎦᏛ neurologists ᎢᏧᎳᎭ ᎤᎾᏓᏟᏌᎲ ᎠᏓᏅᏖᏗᏱ phenomena ᏯᏛᎿ ᏥᏄᏍᏗ [[daydream]]ing ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏓᏩᏛᎢᏍᏗ ᎢᏰᎵᏍᏗᎢ.
+ᎾᎿᎢ ᎨᏒᎢ Ꮭ ᎢᎬᏩᎾᏓᎴᎩ ᏚᏓᏂᎸᏨ-ᎾᏍᎩ biological ᏩᏎᏍᏗ ᎾᎿ ᎢᏰᎵᏍᏗᎢ. ᎯᎠ ᎤᏬᎯᏳᏒ ᎧᏃᎮᎭ Ꮎ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ [[REM sleep|ᎬᏙᏗ ᎦᎸᏗ]] ᎠᎴ ᎯᎠ ᎪᎯᏳᏙ ᎾᏍᎩᎾᎢ ᎪᎯ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎳᏂᎩᏓ. ᎢᏳᏍᏗ ᏗᎧᏃᎮᏗ awakened ᎾᎯᏳᎨᏒ ᎬᏙᏗ ᎦᎸᏗ ᎤᏠᏱᎭ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎤᎲᎢ ᏭᏪᏙᎢ ᎢᏰᎵᏍᏗᎢ ᎠᎴ ᎣᏂ ᏧᏩᎫᏛ ᎬᏙᏗ ᎦᎸᏗ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᏥᏄᏍᏗ ᎠᏍᏛᎩ ᏥᏄᏍᏗ ᎬᏙᏗ-ᎬᏙᏗ ᎦᎸᏗ, ᎾᏍᎩ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᎤᏚᎩ ᎤᏩᏒ Ꮎ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎤᏟ ᎢᏲᏍᏛ ᎠᏅᏓᏛᎯ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏎᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᎤᏟ ᎢᎦᎢ ᏧᏣᏔᏊ ᎾᎯᏳᎨᏒ ᎬᏙᏗ ᎦᎸᏗ.  ᎢᎦᏛ neurologists ᎢᏧᎳᎭ ᎤᎾᏓᏟᏌᎲ ᎠᏓᏅᏖᏗᏱ phenomena ᏯᏛᎿ ᏥᏄᏍᏗ [[daydream]]ing ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏓᏩᏛᎢᏍᏗ ᎢᏰᎵᏍᏗᎢ.
 
 ᎾᎯᏳᎨᏒ ᏫᏚᏳᎪᏛ ᎠᎴᏫᏍᏙᏗ ᎠᏏᏴᏫ ᎤᏩᏍᎬ ᎬᏩᏚᏫᏛ 6 ᏧᏕᏘᏴᏓ ᎢᏰᎵᏍᏗᎢ<ref>{{cite book
 | year = 2006
@@ -105,11 +102,11 @@ HG Publishing
 | accessdate = 2006-05-04
 }}</ref>).
 
-ᎢᎦᏛ ᏗᎦᏎᏍᏙᏗ ᎾᎿ iyuwakodi ᎤᏓᏅᏖᏗ ᎾᎯᏳᎨᏒ ᏗᏍᎩᏘᏍᏗ ᎤᎭ ᏕᎫᎪᏔᏅ Ꮎ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎤᏤᎵ ᎤᏓᏅᏖᏗ iyuwakodi ᎾᎯᏳᎨᏒ ᎠᏍᎩᏘᏍᏗ ᎾᎥᏂᎨᎢ matches ᎤᎾᏤᎵ iyuwakodi ᎤᏓᏅᏖᏗ ᎾᎯᏳᎨᏒ waking ᎠᎵᏂᎬᏁᏗᎢ. ᎭᏫᎾᏗᏢ ᏐᎢ ᎤᏂᏁᏨ, ᎢᏳᏃ ᎠᏍᎩᏘᏍᏗ ᎾᏁᎵᏍᎬᎢ ᎾᏍᎩᏯᎢ ᎾᏍᎩ ᏰᎵᏊ ᏄᏪᏨ ᏔᎳᏍᎪᎯ ᎯᎸᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ, ᎾᏍᎩ ᎯᎠ ᏗᎦᏎᏍᏙᏗ ᎧᏁᎢᏍᏙᏗ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎤᏙᎯᏳᎢ ᎬᏩᏚᏫᏛ ᏔᎳᏍᎪᎯ ᎯᎸᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ. ᏱᏂᎬᏛᎾ, ᏐᎢ ᏗᎦᏎᏍᏙᏗ ᎤᎭ ᎠᏩᏛᏗ ᎪᎯ ᎾᏍᏋ ᎦᏬᏂᎯᏍᏗ ᎠᏕᎶᏆᏍᏗ. ᎯᎠ ᎢᏴ, ᎾᎿᎢ ᎨᏒᎢ ᎢᎦᏛ ᏗᏟᏴ ᏗᎦᏬᏂᎯᏍᏗ ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᎯᎠ ᏗᏗᎦᎴᏴ iyuwakodi ᎭᏫᎾᏗᏢ ᎠᏍᎩᏘᏍᏗ ᏓᎾᏓᏛᎩᏍᎬ ᎤᏙᎯᏳ ᏄᏍᏛ.
+ᎢᎦᏛ ᏗᎦᏎᏍᏙᏗ ᎾᎿ ᎢᏳᏩᎪᏗ ᎤᏓᏅᏖᏗ ᎾᎯᏳᎨᏒ ᏗᏍᎩᏘᏍᏗ ᎤᎭ ᏕᎫᎪᏔᏅ Ꮎ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎤᏤᎵ ᎤᏓᏅᏖᏗ ᎢᏳᏩᎪᏗ ᎾᎯᏳᎨᏒ ᎠᏍᎩᏘᏍᏗ ᎾᎥᏂᎨᎢ matches ᎤᎾᏤᎵ ᎢᏳᏩᎪᏗ ᎤᏓᏅᏖᏗ ᎾᎯᏳᎨᏒ waking ᎠᎵᏂᎬᏁᏗᎢ. ᎭᏫᎾᏗᏢ ᏐᎢ ᎤᏂᏁᏨ, ᎢᏳᏃ ᎠᏍᎩᏘᏍᏗ ᎾᏁᎵᏍᎬᎢ ᎾᏍᎩᏯᎢ ᎾᏍᎩ ᏰᎵᏊ ᏄᏪᏨ ᏔᎳᏍᎪᎯ ᎯᎸᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ, ᎾᏍᎩ ᎯᎠ ᏗᎦᏎᏍᏙᏗ ᎧᏁᎢᏍᏙᏗ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎤᏙᎯᏳᎢ ᎬᏩᏚᏫᏛ ᏔᎳᏍᎪᎯ ᎯᎸᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ. ᏱᏂᎬᏛᎾ, ᏐᎢ ᏗᎦᏎᏍᏙᏗ ᎤᎭ ᎠᏩᏛᏗ ᎪᎯ ᎾᏍᏋ ᎦᏬᏂᎯᏍᏗ ᎠᏕᎶᏆᏍᏗ. ᎯᎠ ᎢᏴ, ᎾᎿᎢ ᎨᏒᎢ ᎢᎦᏛ ᏗᏟᏴ ᏗᎦᏬᏂᎯᏍᏗ ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᎯᎠ ᏗᏗᎦᎴᏴ ᎢᏳᏩᎪᏗ ᎭᏫᎾᏗᏢ ᎠᏍᎩᏘᏍᏗ ᏓᎾᏓᏛᎩᏍᎬ ᎤᏙᎯᏳ ᏄᏍᏛ.
 
 ᎾᏍᎩ ᎨᏒᎢ ᎤᎧᏁᎳ ᎭᏢᏃ ᎭᏫᎾᏗᏢ ᎯᎠ [[brain|ᎤᏅᏥᏓ]] ᏗᏍᎩᏘᏍᏗ ᎠᎴᏅᏙᏗ — ᎢᏳᏃ ᎾᎿᎢ ᎨᏒᎢ ᏯᏛᎿ ᏏᏴᏫ ᎦᎷᎯᏍᏗ — ᎠᎴ ᎦᏙᏃ ᏗᏍᎩᏘᏍᏗ ᏄᎵᏍᏔᏅ ᎾᎾᎢ ᏂᎦᏛ.  ᏱᏂᎬᏛᎾ, ᎾᎿᎢ ᎠᎴ ᎤᎪᏗᏗ competing theories ᎯᎠ [[neurology|ᎤᏙᏢᏒ]] ᏗᏍᎩᏘᏍᏗ.
 
-[[Eugen Tarnow]] ᎠᏂᏁᎢᏍᏗ Ꮎ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎢᏳᏊ ᎡᏙᎠ ᏄᎵᏂᎬᎬ [[long term memory|ᎦᏅᎯᏓ ᎠᎴᏂᏍᎬ ᎠᏅᏓᏗᏍᏗ]], ᎢᏧᎳᎭ ᎾᎯᏳᎨᏒ waking ᎥᎴᏂᏙᎲ. ᎯᎠ strangeness ᏗᏍᎩᏘᏍᏗ ᎨᏒᎢ ᎤᏍᏆᎸᎲ ᎯᎠ format ᎦᏅᎯᏓ-ᎠᎴᏂᏍᎬ ᎠᏅᏓᏗᏍᏗ, reminiscent ᎯᎠ Penfield & Rasmussen’s ᎥᏩᏘᏍᎬ Ꮎ ᎬᏙᏗ ᎠᎾᎦᎵᏍᎩ ᏄᎵᏂᎬᎬ ᎯᎠ [[Cerebral cortex|ᎠᏰᎵ]] ᎠᏓᏁᏗ ᎤᎵᏌᎳᏙᏗ unigatohvsv ᎤᏠᏱ ᏗᏍᎩᏘᏍᏗ. ᎾᎯᏳᎨᏒ waking ᎥᎴᏂᏙᎲ ᏄᎬᏫᏳᏌᏕᎩ ᎤᏯᎾᏛᏁᏗ ᎠᏁᎳᏙᏗ ᎦᏅᎯᏓ ᎠᎴᏂᏍᎬ ᎠᏅᏓᏗᏍᏗ ᎤᏠᏱᎭ ᎬᏙᏗ ᎤᏙᎯᏳ ᏄᏍᏛ ᏕᎪᏢᏍᎬ ᏗᏎᎯᏍᏗ.  Tarnow ᎤᏤᎵ ᎪᎷᏩᏛᏗ ᎨᏒᎢ reworking Freud ᎤᏤᎵ ᎪᎷᏩᏛᏗ ᏗᏍᎩᏘᏍᏗ ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ Freud ᎤᏤᎵ ᎾᏕᎶᎰᏍᎬᎾ ᎨᏒᎢ ᏅᎪᏢᎯᏌᏅ ᎬᏙᏗ ᎯᎠ [[long term memory|ᎦᏅᎯᏓ ᎠᎴᏂᏍᎬ ᎠᏅᏓᏗᏍᏗ]] iyahdvnelidasdi ᎠᎴ Freud ᎤᏤᎵ “Dream Work” ᏄᏍᏛ ᎧᏃᎮᏗ ᎯᎠ ᎠᏛᎯᏍᏙᏗ [[long term memory|ᎦᏅᎯᏓ ᎠᎴᏂᏍᎬ ᎠᏅᏓᏗᏍᏗ]].<ref>{{cite book
+[[Eugen Tarnow]] ᎠᏂᏁᎢᏍᏗ Ꮎ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎢᏳᏊ ᎡᏙᎠ ᏄᎵᏂᎬᎬ [[long term memory|ᎦᏅᎯᏓ ᎠᎴᏂᏍᎬ ᎠᏅᏓᏗᏍᏗ]], ᎢᏧᎳᎭ ᎾᎯᏳᎨᏒ waking ᎥᎴᏂᏙᎲ. ᎯᎠ strangeness ᏗᏍᎩᏘᏍᏗ ᎨᏒᎢ ᎤᏍᏆᎸᎲ ᎯᎠ format ᎦᏅᎯᏓ-ᎠᎴᏂᏍᎬ ᎠᏅᏓᏗᏍᏗ, reminiscent ᎯᎠ Penfield ᎠᎴ Rasmussen’s ᎥᏩᏘᏍᎬ Ꮎ ᎬᏙᏗ ᎠᎾᎦᎵᏍᎩ ᏄᎵᏂᎬᎬ ᎯᎠ [[Cerebral cortex|ᎠᏰᎵ]] ᎠᏓᏁᏗ ᎤᎵᏌᎳᏙᏗ unigatohvsv ᎤᏠᏱ ᏗᏍᎩᏘᏍᏗ. ᎾᎯᏳᎨᏒ waking ᎥᎴᏂᏙᎲ ᏄᎬᏫᏳᏌᏕᎩ ᎤᏯᎾᏛᏁᏗ ᎠᏁᎳᏙᏗ ᎦᏅᎯᏓ ᎠᎴᏂᏍᎬ ᎠᏅᏓᏗᏍᏗ ᎤᏠᏱᎭ ᎬᏙᏗ ᎤᏙᎯᏳ ᏄᏍᏛ ᏕᎪᏢᏍᎬ ᏗᏎᎯᏍᏗ.  Tarnow ᎤᏤᎵ ᎪᎷᏩᏛᏗ ᎨᏒᎢ reworking Freud ᎤᏤᎵ ᎪᎷᏩᏛᏗ ᏗᏍᎩᏘᏍᏗ ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ Freud ᎤᏤᎵ ᎾᏕᎶᎰᏍᎬᎾ ᎨᏒᎢ ᏅᎪᏢᎯᏌᏅ ᎬᏙᏗ ᎯᎠ [[long term memory|ᎦᏅᎯᏓ ᎠᎴᏂᏍᎬ ᎠᏅᏓᏗᏍᏗ]] ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᎴ Freud ᎤᏤᎵ “Dream Work” ᏄᏍᏛ ᎧᏃᎮᏗ ᎯᎠ ᎠᏛᎯᏍᏙᏗ [[long term memory|ᎦᏅᎯᏓ ᎠᎴᏂᏍᎬ ᎠᏅᏓᏗᏍᏗ]].<ref>{{cite book
 | last = Tarnow
 | first = Eugen
 | year = 2003
@@ -118,7 +115,7 @@ HG Publishing
 | edition = 5(2)
 }}</ref>
 
-ᎯᎠ [[activation synthesis theory|activation ᏧᏓᎴᎾᎢ ᎪᎷᏩᏛᏗ]] ᎤᏙᎷᏩᏛᏓ ᎾᎥᎢ [[Allan Hobson]] ᎠᎴ [[Robert McCarley]] ᎧᏁᎢᏍᏗᏱ Ꮎ ᎯᎠ ᎣᏓᏅᏛ unigatohvsv ᎠᎴ ᎦᎾᎬᎢ ᎾᎥᎢ ᎯᎠ ᎠᏰᎵ ᏥᏄᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ ᎠᏁᎳᏙᏗ ᎤᏍᏆᏂᎪᏗ ᏂᎬᎢ ᏂᏛᎴᏅᏓ ᎯᎠ pons. ᎤᏅᏌ ᎠᎵᏔᏲᏍᏗ Ꮎ ᎭᏫᎾᏗᏢ ᎬᏙᏗ ᎦᎸᏗ, ᎯᎠ ᎠᎷᏚᎧᏘ cholinergic PGO (ponto-geniculo-occipital) ᎠᎺᏉᎯ ᏄᎵᏂᎬᎬ ᎦᎸᎳᏗᎨᏍᏙᏗ midbrain ᎠᎴ forebrain ᎠᏰᎵ ᎠᏛᎯᏍᏙᏗ, ᎠᏛᎯᏍᏗᏍᎬ ᎦᏣᏄᎳ agatoli ᎠᏓᏅᏏᏙᎠ. ᎯᎠ activated forebrain ᎾᎯᏳᎢ synthesizes ᎯᎠ ᎠᏍᎩᏘᏍᏗ atsinuqowisgv ᎪᎯ ᎭᏫᎾᏗᏢ generated ᎠᏓᏃᎯᏎᏗ. ᎤᏅᏌ ᎢᏰᎵᏍᏗ Ꮎ ᎯᎠ ᎤᏠᏱ ᎠᏛᎯᏍᏙᏗ Ꮎ ᎢᏳᏩᏂᏐᏗ ᎬᏙᏗ ᎦᎸᏗ ᎾᏍᎩ ᎾᏍᏇ ᎠᏛᎯᏍᏙᏗ ᎣᏓᏅᏛ ᎠᏓᏃᎯᏎᏗ.<ref>{{cite book
+ᎯᎠ [[activation synthesis theory|activation ᏧᏓᎴᎾᎢ ᎪᎷᏩᏛᏗ]] ᎤᏙᎷᏩᏛᏓ ᎾᎥᎢ [[Allan Hobson]] ᎠᎴ [[Robert McCarley]] ᎧᏁᎢᏍᏗᏱ Ꮎ ᎯᎠ ᎣᏓᏅᏛ ᎤᏂᎦᏙᎲᏒ ᎠᎴ ᎦᎾᎬᎢ ᎾᎥᎢ ᎯᎠ ᎠᏰᎵ ᏥᏄᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ ᎠᏁᎳᏙᏗ ᎤᏍᏆᏂᎪᏗ ᏂᎬᎢ ᏂᏛᎴᏅᏓ ᎯᎠ pons. ᎤᏅᏌ ᎠᎵᏔᏲᏍᏗ Ꮎ ᎭᏫᎾᏗᏢ ᎬᏙᏗ ᎦᎸᏗ, ᎯᎠ ᎠᎷᏚᎧᏘ cholinergic PGO (ponto-geniculo-occipital) ᎠᎺᏉᎯ ᏄᎵᏂᎬᎬ ᎦᎸᎳᏗᎨᏍᏙᏗ midbrain ᎠᎴ forebrain ᎠᏰᎵ ᎠᏛᎯᏍᏙᏗ, ᎠᏛᎯᏍᏗᏍᎬ ᎦᏣᏄᎳ ᎠᎦᏙᎵ ᎠᏓᏅᏏᏙᎠ. ᎯᎠ activated forebrain ᎾᎯᏳᎢ synthesizes ᎯᎠ ᎠᏍᎩᏘᏍᏗ ᎠᏥᏄᏉᏫᏍᎬ ᎪᎯ ᎭᏫᎾᏗᏢ generated ᎠᏓᏃᎯᏎᏗ. ᎤᏅᏌ ᎢᏰᎵᏍᏗ Ꮎ ᎯᎠ ᎤᏠᏱ ᎠᏛᎯᏍᏙᏗ Ꮎ ᎢᏳᏩᏂᏐᏗ ᎬᏙᏗ ᎦᎸᏗ ᎾᏍᎩ ᎾᏍᏇ ᎠᏛᎯᏍᏙᏗ ᎣᏓᏅᏛ ᎠᏓᏃᎯᏎᏗ.<ref>{{cite book
 | last = Hobson
 | first = J.A.
 | coauthors = McCarley, R.
@@ -139,7 +136,7 @@ HG Publishing
 | pages = 793-1121
 }}</ref>
 
-Combining Hobson ᎤᏤᎵ activation ᏧᏓᎴᎾᎢ ᏄᏍᏗᏓᏅ ᎬᏙᏗ Solms ᎤᏤᎵ ᎥᏩᏘᏍᎬ, ᎯᎠ ᏂᎪᎯᎸᎢ-activation ᎪᎷᏩᏛᏗ ᎢᏰᎵᏍᏗᎢ ᎤᏓᏁᎸᎩ ᎾᎥᎢ Jie Zhang ᎠᎵᏔᏲᏍᏗ Ꮎ ᎢᏰᎵᏍᏗᎢ ᎨᏒᎢ ᏄᎵᏍᏔᏅ ᎤᏅᏥᏓ activation ᎠᎴ ᏧᏓᎴᎾᎢ, ᎠᎴ ᎾᎾᎢ ᎯᎠ ᎤᏠᏱ iyuwakodi, ᎢᏰᎵᏍᏗᎢ ᎠᎴ ᎬᏙᏗ ᎦᎸᏗ ᎠᎴ controlled ᎾᎥᎢ ᏄᏓᎴᎿᎥ ᎤᏅᏥᏓ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ. Zhang hypothesizes Ꮎ ᎯᎠ ᎤᏯᎾᏛᏁᏗ ᎦᎸᏗ ᎨᏒᎢ ᏧᎵᎬᏩᎳᏅᎯ, encode ᎠᎴ ᏫᏓᏲᎯᏍᏗ ᎯᎠ ᎾᎯᏳ ᎢᎪᎯ ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱ ᎨᏰᎯ ᎠᏅᏓᏗᏍᏗ ᎯᎠ ᎦᏅᎯᏓ-ᎠᎴᏂᏍᎬ ᎠᏅᏓᏗᏍᏗ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎾᎿᎢ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏣᏘ ᎪᎯᏳᏙ ᎦᏐᎯ ᎦᎸᎳᏗᏢ ᎯᎠ "ᎠᏫᏒᏗ". NREM ᎦᎸᏗ processes ᎯᎠ ᎠᏕᎶᎰᏍᎩ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎠᏅᏓᏗᏍᏗ (declarative ᎠᏅᏓᏗᏍᏗ); ᎠᎴ ᎬᏙᏗ ᎦᎸᏗ processes ᎯᎠ ᎬᏙᏗ-ᎠᏕᎶᎰᏍᎩ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎠᏅᏓᏗᏍᏗ (procedural ᎠᏅᏓᏗᏍᏗ). Zhang ᎢᏰᎵᏍᏗ Ꮎ ᎾᎯᏳᎨᏒ ᎬᏙᏗ ᎦᎸᏗ, ᎯᎠ ᎬᏙᏗ-ᎠᏕᎶᎰᏍᎩ ᎢᎦᏛ ᎤᏅᏥᏓ ᎨᏒᎢ ᏧᏍᏈᏯ ᏧᎸᏫᏍᏓᏁᎯ ᏧᎵᎬᏩᎳᏅᎯ ᎯᎠ procedural ᎠᏅᏓᏗᏍᏗ; ᎭᏫᎾᏗᏢ ᎯᎠ ᎾᎯᏳ ᏯᏛᎿ, ᎯᎠ ᎤᏩᎾᏕᏍᎩ activation ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏕᎶᎰᏍᎩ ᎢᎦᏛ ᎤᏅᏥᏓ ᏫᎵ ᎠᎦᏲᎳᏗᏍᏗ ᎤᏙᎯᏳ ᎡᎳᏗ ᎤᏩᎾᏕᏍᎩ ᏥᏄᏍᏗ ᎯᎠ inputs ᏂᏛᎴᏅᏓ ᎯᎠ ᎣᏓᏅᏛ ᎠᎴ basically ᎬᏙᏗ. ᎪᎯ ᏫᎵ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎯᎠ ᏂᎪᎯᎸᎢ-activation ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᏛᎯᏍᏙᏗ ᎾᎯᏳ ᎢᎪᎯ ᎤᏪᏴᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᏅᏓᏗᏍᏗ ᏓᏓᎾᏅ ᎠᏕᏴᎠᏍᎬ ᏗᎬᏩᎶᏒ ᎯᎠ ᎠᏕᎶᎰᏍᎩ ᎢᎦᏛ ᎤᏅᏥᏓ. Zhang ᎠᏂᏁᎢᏍᏗ Ꮎ ᎪᎯ ᏧᏩᏚᏃᎯ-ᎾᏍᎩᏯᎢ ᎤᏅᏥᏓ activation ᎨᏒᎢ ᎯᎠ inducer ᎠᏂᏏᏴᏫᎭ ᎠᏍᎩᏘᏍᏗ. ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᎵᏔᏲᏍᏗ Ꮎ, ᎬᏙᏗ ᎯᎠ ᎤᏠᏯᏍᏔᏅ ᎤᏅᏥᏓ associative ᎠᎾᏓᏅᏖᏍᎬ iyahdvnelidasdi, ᎢᏰᎵᏍᏗᎢ ᎨᏒᎢ, ᎤᏩᎫᏗᏗᏒ, ᎣᏩᏒ ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎬᏙᏗ ᎤᎿᎸ ᎠᏍᎦᏯ ᎤᏤᎵ ᎣᏤᎵ ᎠᎾᏓᏅᏖᏍᎬ iyuwakodi ᎯᎠ ᏐᎢ ᏧᏩᏚᏃᎯ ᎠᏅᏓᏗᏍᏗ ᎦᏟᏐᏗᎩ. ᎪᎯ ᏕᎪᏏᏏ ᎦᏙᏃ ᏗᏍᎩᏘᏍᏗ ᎤᎭ ᎢᏧᎳ ᎨᎦᏓᏅᏖᏗ ᎠᏓᏅᏍᏗ (ᎭᏫᏂᏗᏢ ᎠᏍᎩᏘᏍᏗ) ᎠᎴ ᎤᎳᏂᎩᏓ ᏗᎧᏃᏗ ᏗᎦᏁᏟᏴᏍᏗ (ᎠᏰᎵ ᏔᎵ ᏗᏍᎩᏘᏍᏗ).<ref>{{cite book
+Combining Hobson ᎤᏤᎵ activation ᏧᏓᎴᎾᎢ ᏄᏍᏗᏓᏅ ᎬᏙᏗ Solms ᎤᏤᎵ ᎥᏩᏘᏍᎬ, ᎯᎠ ᏂᎪᎯᎸᎢ-activation ᎪᎷᏩᏛᏗ ᎢᏰᎵᏍᏗᎢ ᎤᏓᏁᎸᎩ ᎾᎥᎢ Jie Zhang ᎠᎵᏔᏲᏍᏗ Ꮎ ᎢᏰᎵᏍᏗᎢ ᎨᏒᎢ ᏄᎵᏍᏔᏅ ᎤᏅᏥᏓ activation ᎠᎴ ᏧᏓᎴᎾᎢ, ᎠᎴ ᎾᎾᎢ ᎯᎠ ᎤᏠᏱ ᎢᏳᏩᎪᏗ, ᎢᏰᎵᏍᏗᎢ ᎠᎴ ᎬᏙᏗ ᎦᎸᏗ ᎠᎴ controlled ᎾᎥᎢ ᏄᏓᎴᎿᎥ ᎤᏅᏥᏓ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ. Zhang hypothesizes Ꮎ ᎯᎠ ᎤᏯᎾᏛᏁᏗ ᎦᎸᏗ ᎨᏒᎢ ᏧᎵᎬᏩᎳᏅᎯ, encode ᎠᎴ ᏫᏓᏲᎯᏍᏗ ᎯᎠ ᎾᎯᏳ ᎢᎪᎯ ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱ ᎨᏰᎯ ᎠᏅᏓᏗᏍᏗ ᎯᎠ ᎦᏅᎯᏓ-ᎠᎴᏂᏍᎬ ᎠᏅᏓᏗᏍᏗ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎾᎿᎢ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏣᏘ ᎪᎯᏳᏙ ᎦᏐᎯ ᎦᎸᎳᏗᏢ ᎯᎠ "ᎠᏫᏒᏗ". NREM ᎦᎸᏗ processes ᎯᎠ ᎠᏕᎶᎰᏍᎩ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎠᏅᏓᏗᏍᏗ (declarative ᎠᏅᏓᏗᏍᏗ); ᎠᎴ ᎬᏙᏗ ᎦᎸᏗ processes ᎯᎠ ᎬᏙᏗ-ᎠᏕᎶᎰᏍᎩ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎠᏅᏓᏗᏍᏗ (procedural ᎠᏅᏓᏗᏍᏗ). Zhang ᎢᏰᎵᏍᏗ Ꮎ ᎾᎯᏳᎨᏒ ᎬᏙᏗ ᎦᎸᏗ, ᎯᎠ ᎬᏙᏗ-ᎠᏕᎶᎰᏍᎩ ᎢᎦᏛ ᎤᏅᏥᏓ ᎨᏒᎢ ᏧᏍᏈᏯ ᏧᎸᏫᏍᏓᏁᎯ ᏧᎵᎬᏩᎳᏅᎯ ᎯᎠ procedural ᎠᏅᏓᏗᏍᏗ; ᎭᏫᎾᏗᏢ ᎯᎠ ᎾᎯᏳ ᏯᏛᎿ, ᎯᎠ ᎤᏩᎾᏕᏍᎩ activation ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏕᎶᎰᏍᎩ ᎢᎦᏛ ᎤᏅᏥᏓ ᏫᎵ ᎠᎦᏲᎳᏗᏍᏗ ᎤᏙᎯᏳ ᎡᎳᏗ ᎤᏩᎾᏕᏍᎩ ᏥᏄᏍᏗ ᎯᎠ inputs ᏂᏛᎴᏅᏓ ᎯᎠ ᎣᏓᏅᏛ ᎠᎴ basically ᎬᏙᏗ. ᎪᎯ ᏫᎵ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎯᎠ ᏂᎪᎯᎸᎢ-activation ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎠᏛᎯᏍᏙᏗ ᎾᎯᏳ ᎢᎪᎯ ᎤᏪᏴᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᏅᏓᏗᏍᏗ ᏓᏓᎾᏅ ᎠᏕᏴᎠᏍᎬ ᏗᎬᏩᎶᏒ ᎯᎠ ᎠᏕᎶᎰᏍᎩ ᎢᎦᏛ ᎤᏅᏥᏓ. Zhang ᎠᏂᏁᎢᏍᏗ Ꮎ ᎪᎯ ᏧᏩᏚᏃᎯ-ᎾᏍᎩᏯᎢ ᎤᏅᏥᏓ activation ᎨᏒᎢ ᎯᎠ inducer ᎠᏂᏏᏴᏫᎭ ᎠᏍᎩᏘᏍᏗ. ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᎵᏔᏲᏍᏗ Ꮎ, ᎬᏙᏗ ᎯᎠ ᎤᏠᏯᏍᏔᏅ ᎤᏅᏥᏓ associative ᎠᎾᏓᏅᏖᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ, ᎢᏰᎵᏍᏗᎢ ᎨᏒᎢ, ᎤᏩᎫᏗᏗᏒ, ᎣᏩᏒ ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎬᏙᏗ ᎤᎿᎸ ᎠᏍᎦᏯ ᎤᏤᎵ ᎣᏤᎵ ᎠᎾᏓᏅᏖᏍᎬ ᎢᏳᏩᎪᏗ ᎯᎠ ᏐᎢ ᏧᏩᏚᏃᎯ ᎠᏅᏓᏗᏍᏗ ᎦᏟᏐᏗᎩ. ᎪᎯ ᏕᎪᏏᏏ ᎦᏙᏃ ᏗᏍᎩᏘᏍᏗ ᎤᎭ ᎢᏧᎳ ᎨᎦᏓᏅᏖᏗ ᎠᏓᏅᏍᏗ (ᎭᏫᏂᏗᏢ ᎠᏍᎩᏘᏍᏗ) ᎠᎴ ᎤᎳᏂᎩᏓ ᏗᎧᏃᏗ ᏗᎦᏁᏟᏴᏍᏗ (ᎠᏰᎵ ᏔᎵ ᏗᏍᎩᏘᏍᏗ).<ref>{{cite book
 | last = Zhang
 | first = Jie
 | year = 2004
@@ -159,10 +156,10 @@ Combining Hobson ᎤᏤᎵ activation ᏧᏓᎴᎾᎢ ᏄᏍᏗᏓᏅ ᎬᏙᏗ 
 
 == ᏐᎢ ==
 === ᏗᏍᎩᏘᏍᏗ ᏁᏙᎲᎾ ᎦᎵᏓᏍᏛ ᎠᎦᏛᎴᎯᏍᏗ ===
-ᏗᏍᎩᏘᏍᏗ ᏁᏙᎲᎾ ᎦᎵᏓᏍᏛ ᎠᎦᏛᎴᎯᏍᏗ (DAMT) ᎠᎴ ᏗᏍᎩᏘᏍᏗ ᎭᏢᏃ ᎯᎠ ᎠᏂᏏᏴᏫᎭ ᎢᏰᎵᏍᏗᎢ ᎾᎪᎲᎾ ᎢᏯᏛᏁᏗ ᎠᎵᏖᎸᏗ Ꮎ ᎤᏅᏌ ᎤᎭ ᏭᏪᏙᎢ ᎠᏁᎶᏗᏍᎬ ᎠᎴᏫᏍᏙᏗ (lyudetiyvda ᏱᏓᏟᎶᏍᏔᏅ ᎠᎴᏂᏙᎲ ᏓᎾᏛᏁᎵᏍᎬ ᎠᏁᎶᏗᏍᎬ ᏞᏍᏗ ᎤᎲᎢ ᏗᏍᎩᏘᏍᏗ ᎠᏨᏍᏛᏍᎬ ᎪᏪᎵᏗᎪᏢ ᏗᎪᎦᏍᏗ). ᎢᏳᏍᏗ ᏗᎧᏃᎮᏗ Ꮎ ᎤᎭ ᎠᏰᎲ DAMT ᏗᏍᎩᏘᏍᏗ ᎤᎭ ᎬᏂᎨᏒ ᎢᎬᏁᎸ awaking ᎬᏙᏗ ᎤᎶᏒᏍᏗ ᎤᎾᏒᎾᏍᏗᏱ ᎤᏍᎦᏅᏨ. ᎢᎦᏛ ᏗᎦᏎᏍᏙᏗ ᎤᎭ ᎤᎾᏓᏎᎮᎸᎩ Ꮎ DAMT ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎤᏙᎯᏳᎯᏯ correlated ᎬᏙᏗ ᎦᏣᏄᎳ ᎠᎴᏫᏍᏗᏍᎬ ᎯᎠ behaviour ᎤᏠᏱᎭᎢ ᎠᎨᏔᏗᏍᏗ ᎢᏳᏍᏗ ᏗᎧᏃᎮᏗ ᎦᎪ ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ugatohvsv ᎾᏍᎩ ᎯᎠ ᏗᏍᎩᏘᏍᏗ.<ref>{{cite web
+ᏗᏍᎩᏘᏍᏗ ᏁᏙᎲᎾ ᎦᎵᏓᏍᏛ ᎠᎦᏛᎴᎯᏍᏗ (DAMT) ᎠᎴ ᏗᏍᎩᏘᏍᏗ ᎭᏢᏃ ᎯᎠ ᎠᏂᏏᏴᏫᎭ ᎢᏰᎵᏍᏗᎢ ᎾᎪᎲᎾ ᎢᏯᏛᏁᏗ ᎠᎵᏖᎸᏗ Ꮎ ᎤᏅᏌ ᎤᎭ ᏭᏪᏙᎢ ᎠᏁᎶᏗᏍᎬ ᎠᎴᏫᏍᏙᏗ (ᎢᏳᏕᏘᏴᏓ ᏱᏓᏟᎶᏍᏔᏅ ᎠᎴᏂᏙᎲ ᏓᎾᏛᏁᎵᏍᎬ ᎠᏁᎶᏗᏍᎬ ᏞᏍᏗ ᎤᎲᎢ ᏗᏍᎩᏘᏍᏗ ᎠᏨᏍᏛᏍᎬ ᎪᏪᎵᏗᎪᏢ ᏗᎪᎦᏍᏗ). ᎢᏳᏍᏗ ᏗᎧᏃᎮᏗ Ꮎ ᎤᎭ ᎠᏰᎲ DAMT ᏗᏍᎩᏘᏍᏗ ᎤᎭ ᎬᏂᎨᏒ ᎢᎬᏁᎸ awaking ᎬᏙᏗ ᎤᎶᏒᏍᏗ ᎤᎾᏒᎾᏍᏗᏱ ᎤᏍᎦᏅᏨ. ᎢᎦᏛ ᏗᎦᏎᏍᏙᏗ ᎤᎭ ᎤᎾᏓᏎᎮᎸᎩ Ꮎ DAMT ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎤᏙᎯᏳᎯᏯ correlated ᎬᏙᏗ ᎦᏣᏄᎳ ᎠᎴᏫᏍᏗᏍᎬ ᎯᎠ behavior ᎤᏠᏱᎭᎢ ᎠᎨᏔᏗᏍᏗ ᎢᏳᏍᏗ ᏗᎧᏃᎮᏗ ᎦᎪ ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎦᏙᎲᏒ ᎾᏍᎩ ᎯᎠ ᏗᏍᎩᏘᏍᏗ.<ref>{{cite web
 | url = http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&db=PubMed&list_uids=1757662&dopt=Abstract
 | title = Dream of absent-minded transgression: an empirical study of a cognitive withdrawal symptom
-| accessdate = 25 Feb
+| accessdate = 25 ᎧᎦᎵ
 | accessyear = 2006
 | author = Hajek P, Belcher M.
 | publisher = Journal of Abnormal Psychology
@@ -170,20 +167,20 @@ Combining Hobson ᎤᏤᎵ activation ᏧᏓᎴᎾᎢ ᏄᏍᏗᏓᏅ ᎬᏙᏗ 
 }}</ref>
 
 === ᎢᏰᎵᏍᏗᎢ ᏥᏄᏍᏗ sceptical ᏗᎪᏏᏐᏗ ===
-{{main|dream argument}}
 ᎾᎯᏳᎢ ᏌᏊ ᏗᏍᎩᏘᏍᏗ ᎬᏙᏗ-ᎠᏨᏍᏛ ᎠᏍᎩᏘᏍᏗ, ᏌᏊ ᏫᎵ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏕᎳᎰᎯᏍᏗ ᏌᏊ ᎨᏒᎢ ᎢᏰᎵᏍᏗᎢ. ᎪᎯ ᎤᎭ ᎤᏗᏅᏒᎩ ᏗᏕᎶᏆᏍᎩ ᎯᎠ ᎠᏓᏅᏖᏗ Ꮎ ᏌᏊ ᏰᎵᏇ ᎾᏍᏋ ᎢᏰᎵᏍᏗᎢ ᏚᏳᎪᏛ ᎾᏊ (ᎠᎴ ᎾᎾᎢ ᎠᏂᎦᏲᎵ ᏌᏊ ᏰᎵᏇ't ᎾᏍᏋ ᎤᏙᎯᏳ Ꮎ ᎤᏅᏌ're ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᏰᎵᏍᏗᎢ). ᎢᎬᏱ ᎢᎬᏱ ᎦᏰᎯ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎾᎥᎢ [[Descartes]] ᎭᏫᎾᏗᏢ [[Meditations on First Philosophy|ᏁᎵᏒ ᎾᎿ ᎢᎬᏱ ᎤᏬᎳᏨᎯ]], ᎯᎠ ᎠᏍᎩᏘᏍᏗ ᏗᎪᏏᏐᏗ ᎤᎭ ᏗᏙᎳᎩ ᏌᏊ ᎯᎠ ᎤᎪᏗᏗ ᎤᏂᎸᏉᏗ [[sceptical hypothesis|sceptical hypotheses]].
 
 === ᏅᎠᏥᏯᏃᏗ ᏗᏍᎩᏘᏍᏗ ===
 ᎧᎵ ᏗᏙᎳᎩ ᏂᎦᏛᎢ Hamilton-Parker, ᎪᏪᎵ Ꭺgoweli gowlisgi ''ᎢᏰᎵᏍᏗᎢ ᎢᏰᎵᏍᏗᎢ'', ᎤᎪᏗᏗ ᏴᏫ ᎠᏩᏛᏗ ᎤᏙᎯᏳ ᏗᏍᎩᏘᏍᏗ ᏭᎶᏒᏍᏔᏅ ᎤᏦᏍᏗ ᏅᎠᏥᏯᏃᏗ.  ᎢᏯᏛᏁᎵᏓᏍᏗ, ᎤᏅᏌ ᎠᏕᎳᎰᎯᏍᏗ ᎤᏅᏌ ᎤᎭ ᎣᏍᏛ awoken ᏂᏛᎴᏅᏓ ᎠᏍᎩᏘᏍᏗ, ᎠᎴ ᏝᏰᎵ ᎠᏅᏓᏗᏍᏗ Ꮝ ᏗᏙᎳᎩ ᎣᏍᏛ ᎤᏓᏅᏘ.  ᎣᏂ ᏧᏩᎫᏛ ᎤᏅᏌ ᎤᎭ Ꮭ ᎠᎾᏅᏓᏗᏍᎬ ᎦᏙ ᎤᏍᏗ ᏄᎵᏍᏔᏅᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏍᎩᏘᏍᏗ, ᎤᏅᏌ ᎢᏰᎵᏍᏗ Ꮎ ᎾᏍᎩ ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏙᎯᏳᎯᏯ ᏄᎵᏍᏔᏅ.  ᎧᎵ ᏗᏙᎳᎩ Henry ᎤᏓᏂᎳᎯᎨ, ᎪᏪᎵ Ꭺgoweli gowlisgi ''ᎠᏍᎩᏘᏍᏗ ᏅᏬᏘ'', ᎤᎵᏍᎨᏓ technique ᎪᏢᎯᏐᏗ ᎠᏍᎩᏘᏍᏗ ᏅᎠᏥᏯᏃᏗ ᎨᏒᎢ ᎠᏍᏆᏂᎪᏙᏗ [[dream journal|ᎠᏍᎩᏘᏍᏗ ᏕᎪᏪᎸ]]. [[Stephen LaBerge]], ᎪᏪᎵ Ꭺgoweli gowlisgi ''Exploring ᎯᎠ ᎡᎶᎯ ᎠᏨᏍᏛ ᎢᏰᎵᏍᏗᎢ'', ᎾᏍᎩ ᎾᏍᏇ ᎧᏁᎢᏍᏙᏗ Ꮎ ᏂᎯ ᎠᏎ ᎦᎾᎬᎢ ᎠᎧᎵᏬᎯ ᏙᎢ ᏥᏄᏍᏗ ᏄᎵᏍᏛ ᏥᏄᏍᏗ ᏂᎯ ᎤᎭ ᎠᏓᏃᎯᏎᏗ ᏂᏛᎴᏅᏓ ᎠᏍᎩᏘᏍᏗ ᎠᎴ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎵᏍᎪᎸᏔᏅ ᎤᏂᏃᏝᎩ ᎨᏒ ᎯᎠ ᎢᎦ ᎠᎦᏁᎸ ᏂᎯ ᎣᏓᏅᏛ. ᎾᏍᎩ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏙᏗ ᏧᏣᏔᏊ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏅᏓᏗᏍᏗ ᎤᏣᏘ ᎦᏙ ᎤᏍᏗ ᏂᎯ ᎤᎭ ᎣᏍᏛ dreamt ᎠᎴ ᎢᏳᏃ ᏂᎯ ᎤᏓᏂᏝᏅ ᏂᎯ ᎠᎾᏍᎬᏘ ᏄᎵᏍᏛ ᏰᎵᏊ ᎾᏍᏋ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᏩᏗᏱ ᎤᏍᎦᎶᏨ ᎠᎴ ᏗᎬᎭᎷᏴᎯ ᎢᏧᎳ ᏅᎪᏢᎯᏐᏗᏱ ᎯᎠ ᏂᎦᏛ ᎠᏍᎩᏘᏍᏗ.
 
 === Deja Vu ===
-ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏗᎦᎪᏗ ᎠᏍᎩᏘᏍᏗ ᎾᎿ ᎢᏴ ᎩᎶ ᎠᏏᏴᏫ ᏗᏍᎩᏘᏍᏗ ᎬᏩᏚᏫᏛ ᎤᏙᎯᏳ ᏄᏍᏗᏓᏅ ᎠᎴ ᎯᎳᎪ ᎢᏳ Ꮎ ᏄᏍᏗᏓᏅ ᏗᎶᏗ ᎤᏓᎷᎸ Ꮎ ᎠᏏᏴᏫ, ᎾᏍᎩ ᎠᏍᎦᏯ/ᎾᏍᎩ ᎠᎨᏴ ᏅᎠᏥᏯᏃᏗ ᎤᏤᎵ ᎠᏍᎩᏘᏍᏗ ᎠᎴ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᏰᎲ ᎦᏳᎳ ugatohvsvi ᎪᎯ ᎠᏓᏁᎸ ᏄᏍᏗᏓᏅ. ᎭᏫᎾᏗᏢ ᏯᏛᎿ ᏄᏍᏗᏓᏅ ᎯᎠ ᎠᏏᏴᏫ ᏰᎵᏇ ᎠᏅᏓᏗᏍᏗ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᏰᎲ ᎠᏰᎲ ᏯᏛᎿ ᎠᎪᏩᏛᏗ ᎢᎬᏱᎨᏍᏙᏗ ᎾᎿ ᎯᎸᏢ. ᎪᎯ, ᏥᏄᏍᏗ ᎢᏳᏍᏗ ᏯᏛᎿ ᏯᏛᎾ ᎤᏙᎯᏳ, ᎨᏒᎢ ᎾᏍᎩᏯᎢ experiencing ᎪᎱᏍᏗ ᎭᏫᎾᏗᏢ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎣᏂᏯᎨᏍᏙᏗ ᎠᏰᎵ ᎯᎠ ᎤᏠᏱ ᏄᏍᏗᏓᏅ ᎭᏫᎾᏗᏢ ᎤᏙᎯᏳ ᏄᏍᏛ.
+ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏗᎦᎪᏗ ᎠᏍᎩᏘᏍᏗ ᎾᎿ ᎢᏴ ᎩᎶ ᎠᏏᏴᏫ ᏗᏍᎩᏘᏍᏗ ᎬᏩᏚᏫᏛ ᎤᏙᎯᏳ ᏄᏍᏗᏓᏅ ᎠᎴ ᎯᎳᎪ ᎢᏳ Ꮎ ᏄᏍᏗᏓᏅ ᏗᎶᏗ ᎤᏓᎷᎸ Ꮎ ᎠᏏᏴᏫ, ᎾᏍᎩ ᎠᏍᎦᏯ/ᎾᏍᎩ ᎠᎨᏴ ᏅᎠᏥᏯᏃᏗ ᎤᏤᎵ ᎠᏍᎩᏘᏍᏗ ᎠᎴ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᏰᎲ ᎦᏳᎳ ᎤᎦᏙᎲᏒ ᎪᎯ ᎠᏓᏁᎸ ᏄᏍᏗᏓᏅ. ᎭᏫᎾᏗᏢ ᏯᏛᎿ ᏄᏍᏗᏓᏅ ᎯᎠ ᎠᏏᏴᏫ ᏰᎵᏇ ᎠᏅᏓᏗᏍᏗ Ꮎ ᎾᏍᎩ ᎠᏍᎦᏯ ᎠᏰᎲ ᎠᏰᎲ ᏯᏛᎿ ᎠᎪᏩᏛᏗ ᎢᎬᏱᎨᏍᏙᏗ ᎾᎿ ᎯᎸᏢ. ᎪᎯ, ᏥᏄᏍᏗ ᎢᏳᏍᏗ ᏯᏛᎿ ᏯᏛᎾ ᎤᏙᎯᏳ, ᎨᏒᎢ ᎾᏍᎩᏯᎢ experiencing ᎪᎱᏍᏗ ᎭᏫᎾᏗᏢ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎣᏂᏯᎨᏍᏙᏗ ᎠᏰᎵ ᎯᎠ ᎤᏠᏱ ᏄᏍᏗᏓᏅ ᎭᏫᎾᏗᏢ ᎤᏙᎯᏳ ᏄᏍᏛ.
 
 === ᎠᏍᎩᏘᏍᏗ ᎤᎾᏓᏟᏌᏅ ===
-ᎭᏫᎾᏗᏢ ᏌᏊ ᎬᏙᏗ ᎯᎠ ᎠᎴᏂᏍᎬ, "ᎠᏍᎩᏘᏍᏗ ᎤᎾᏓᏟᏌᏅ" ᎨᏒᎢ ᏂᎦᎵᏍᏔᏂᏙᎲ ᎾᏍᎩ ᏯᏛᎿ ᎤᏓᏎᎦᏤᏗ ᏄᏍᏛ ᏕᎫᎪᏗᏍᎬ, ᎤᏠᏱᎭ ᎠᏛᎩᏍᎬ ᏌᏊ, ᏗᏙᎳᎩ ᎢᎦᏛ ᎠᏍᎩᏘᏍᏗ, ᏭᎵᏱᎶᎸ ᎾᎯᏳᎢ ᎠᏓᏃᎯᏎᏗ ᎯᎠ ᎤᎿᎸ ᎠᏍᎦᏯ. ᎾᎿᎢ ᎨᏒᎢ ᏗᎦᏃᏣᎵ ᎠᏂᎶᏁᏍᎬ ᎾᎥᎢ Salvador ᏓᎵ Ꮎ ᎢᏯᏓᏛᏁᎸ ᎪᎯ ᎠᏓᏅᏖᏗ, ᎤᏠᏯᏍᏔᏅ "ᎠᏍᎩᏘᏍᏗ ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ ᎯᎠ ᎤᎳᏫᏛᏓ ᏩᏚᎵᏏ yvwatuwidv Pomegranate, ᏌᏊ ᏔᎵᏁ ᎤᏓᎷᎸ ᎠᏓᏃᎯᏎᏗ" (1944).
+ᎭᏫᎾᏗᏢ ᏌᏊ ᎬᏙᏗ ᎯᎠ ᎠᎴᏂᏍᎬ, "ᎠᏍᎩᏘᏍᏗ ᎤᎾᏓᏟᏌᏅ" ᎨᏒᎢ ᏂᎦᎵᏍᏔᏂᏙᎲ ᎾᏍᎩ ᏯᏛᎿ ᎤᏓᏎᎦᏤᏗ ᏄᏍᏛ ᏕᎫᎪᏗᏍᎬ, ᎤᏠᏱᎭ ᎠᏛᎩᏍᎬ ᏌᏊ, ᏗᏙᎳᎩ ᎢᎦᏛ ᎠᏍᎩᏘᏍᏗ, ᏭᎵᏱᎶᎸ ᎾᎯᏳᎢ ᎠᏓᏃᎯᏎᏗ ᎯᎠ ᎤᎿᎸ ᎠᏍᎦᏯ. ᎾᎿᎢ ᎨᏒᎢ ᏗᎦᏃᏣᎵ ᎠᏂᎶᏁᏍᎬ ᎾᎥᎢ Salvador ᏓᎵ Ꮎ ᎢᏯᏓᏛᏁᎸ ᎪᎯ ᎠᏓᏅᏖᏗ, ᎤᏠᏯᏍᏔᏅ "ᎠᏍᎩᏘᏍᏗ ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ ᎯᎠ ᎤᎳᏫᏛᏓ ᏩᏚᎵᏏ ᏴᏩᏚᏫᏛ Pomegranate, ᏌᏊ ᏔᎵᏁ ᎤᏓᎷᎸ ᎠᏓᏃᎯᏎᏗ" (1944).
 ᎯᎠ ᎠᎴᏂᏍᎬ "ᎠᏍᎩᏘᏍᏗ ᎤᎾᏓᏟᏌᏅ" ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᏅᎠᏯᏍᏗ examining ᎯᎠ ᎢᎦᎢ ᎢᎦᏘ ᎦᏙ ᎤᏍᏗ ᏭᎵᏍᎨᏗᏴ ᎢᎦ ᏂᏕᎦᎵᏍᏔᏂᏙᎲ ᏗᏙᎳᎩ ᎢᏧᏓᎴᎩ ᏗᏍᎩᏘᏍᏗ. ᎾᏞᎬ ᏗᎦᏎᏍᏙᏗ ᎧᏁᎢᏍᏙᏗ Ꮎ ᏂᏕᎦᎵᏍᏔᏂᏙᎲ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎦ ᎾᏞᎬᏊ ᏭᎵᏍᎨᏗᏴ, ᎠᎴ ᎾᏍᎩ ᎬᏩᏚᏫᏛ ᏑᎾᏙᏓᏆᏍᏗ ᎤᏓᎷᎸ, ᎤᎭ ᎯᎠ ᎤᎪᏗᏗ ᎾᏓᏛᏂᏌᏁᎲ (http://www.asdreams.org/2003/ᎠᏓᏓᎶᏙᏗ/genevieve_alain.htm).
 
-== ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
+== ᎯᎪᏩᏔ ᎾᏍᎩ ᎾᏍᏇ ==
+<div style="font-size:100%;-moz-column-count:2; column-count:2;">
 * [[Daydream]]
 * ''[[Dreams (1990 film)|ᏗᏍᎩᏘᏍᏗ (1990 ᏫᏚᏳᎪᏛ)]]''
 * [[Dream art|ᎠᏍᎩᏘᏍᏗ ᏗᏟᎶᏍᏙᏗ]]
@@ -197,47 +194,40 @@ Combining Hobson ᎤᏤᎵ activation ᏧᏓᎴᎾᎢ ᏄᏍᏗᏓᏅ ᎬᏙᏗ 
 * [[Premonition|ᏗᎦᏃᏣᎳᏅ]]
 * [[Sleep|ᎦᎸᏗ]]
 * [[Circadian rhythm|Circadian ᏗᏍᏆᎸᏙᏗ]]
+</div>
+
+=== ᏓᏓᏚᎬ ᎪᏪᎵ ===
+{{reflist}}
 
 == ᏫᏓᏎᎸᎢ ==
-=== Cited ===
-<!--See http://en.wikipedia.org/wiki/Wikipedia:Footnotes for an explanation of how to generate footnotes using the <ref(erences/)> tags-->
-<references/>
-
-=== ᏂᎦᎥ ===
-* ᎡᎯᏍᏛ, F. & Mitchinson, G. (1983) ᎯᎠ ᎤᏯᎾᏛᏁᏗ ᎠᏍᎩᏘᏍᏗ ᎦᎸᏗ. ''ᎤᏁᎳᏅ ᎤᏬᏢᏅ'' '''304''', 111-114.
+* ᎡᎯᏍᏛ, F. ᎠᎴ Mitchinson, G. (1983) ᎯᎠ ᎤᏯᎾᏛᏁᏗ ᎠᏍᎩᏘᏍᏗ ᎦᎸᏗ. ''ᎤᏁᎳᏅ ᎤᏬᏢᏅ'' '''304''', 111-114.
 * Tarnow, E. (2003) ᎯᎳᎪ ᏗᏍᎩᏘᏍᏗ ᎠᎴ ᎠᏅᏓᏗᏍᏗ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ. ''Neuro-Psychoanalysis '''5(2)''', 177-182 ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ [http://cogprints.org/2068/]
 
-== ᎤᏗᏗᏢ ᏓᎪᎵᏰᏍᎬ ==
+== ᎪᏪᎵ ==
 * [[Shriram Sharma Acharya|Acharya, Pt. Shriram Sharma]], [http://www.awgp.org/books/english/sleep_dreams_spiritual.pdf ''Sleep, Dreams and Spiritual Reflections''], pdf ᎠᏝᎥᎢ, 2000
-* [[Artemidorus]], ''ᎯᎠ Oneirocritica Artemidorus'', ᏗᏕᎶᏆᏍᏗ Microfilms, [[New Haven|ᎢᏤ ᎠᏣᏪᏐᎸᏍᏙᏗ]] (1971).
+* [[Artemidorus]], ''ᎯᎠ Oneirocritica Artemidorus'', ᏗᏕᎶᏆᏍᏗ Microfilms, [[New Haven|ᎠᏤ ᎠᏣᏪᏐᎸᏍᏙᏗ]] (1971).
 * [[Gerolamo Cardano]], ''Sul sonno e sul sognare '', Marsilio, [[Venezia]] (1989).
 * [[Carlos Castaneda]], ''ᎯᎠ ᏗᏟᎶᏍᏙᏗ ᎢᏰᎵᏍᏗᎢ'', Rayo, (1994).
 * [[Sigmund Freud]], ''[[The Interpretation of Dreams|ᎯᎠ ᎪᎷᏩᏛᏗ  ᏗᏍᎩᏘᏍᏗ]]'', Avon, (1980).
-* [[Jayne Gackenbach]], [[Stephen LaBerge]], ''ᎠᏕᎶᎰᏍᎩ ᎣᏓᏅᏛ, ᎦᎵᎲᎢ ᎤᏅᏥᏓ: ᏫᏓᎧᏃᏗᏱ ᎾᎿ ᎠᏨᏍᏛ ᎢᏰᎵᏍᏗᎢ'', ᎠᏏᏴᏫ ᏓᏂᎴᏴᏗᏍᎩ ᎤᎾᏙᏢᎯ, [[New York|ᎢᏤ York]] (1988).
+* [[Jayne Gackenbach]], [[Stephen LaBerge]], ''ᎠᏕᎶᎰᏍᎩ ᎣᏓᏅᏛ, ᎦᎵᎲᎢ ᎤᏅᏥᏓ: ᏫᏓᎧᏃᏗᏱ ᎾᎿ ᎠᏨᏍᏛ ᎢᏰᎵᏍᏗᎢ'', ᎠᏏᏴᏫ ᏓᏂᎴᏴᏗᏍᎩ ᎤᎾᏙᏢᎯ, [[New York|ᏄᏯᎩ]] (1988).
 * [[Patricia L Garfield]], ''ᏗᏁᏝᎾ ᎢᏰᎵᏍᏗᎢ'' (1974) ISBN 0-671-21903-0
 * [[Carl Jung]], ''ᏗᏍᎩᏘᏍᏗ'', [[Princeton University Press|Princeton ᏗᏕᎶᏆᏍᏗ ᏗᏂᎴᏱᏗᏍᎩ]], [[Princeton, New Jersey|Princeton, ᎢᏤ ᎫᏢᎥᏍᎬ]] (1974).
-* [[Will Phillips|ᏫᎵ Phillips]], ''ᏂᎦᎥᎢ ᎤᎿᎸ ᎠᏍᎦᏯ ᎤᏤᎵ ᎥᎢᏒᎢ: ᎠᎳᏍᎬᏓ-ᎾᎥᎢ-ᎠᎳᏍᎬᏓ ᎠᏓᏎᎮᏗ ᎪᎵᏍᏗᏱ ᎠᎴ ᎤᎵᏍᏕᎸᏙᏗ ᏂᏛᎴᏅᏓ ᏂᎯ ᏗᏍᎩᏘᏍᏗ'', ISBN 1-57566-048-2, [[Kensington, NY 1996]], Totonada ᏗᏂᎴᏱᏗᏍᎩ 1994
-* [[Namkhai Norbu Rinpoche]], ''ᎠᏍᎩᏘᏍᏗ Yoga ᎠᎴ ᎯᎠ ᎠᎵᏏᎾᎯᏍᏙᏗ ᏂᎬᏩᏍᏛ ᎠᏨᏍᏛ'', ᎤᎾᏥ ᏢᏓᏥ ᏚᏂᏃᏣᎳᏅ, [[Ithaca, New York|Ithaca, ᎢᏤ York]] (1992).
-* [[Tenzin Wangyal Rinpoche]], ''ᎯᎠ Tibetan Yogas ᎠᏍᎩᏘᏍᏗ ᎠᎴ ᎦᎸᏗ'', ᎤᎾᏥ ᏢᏓᏥ ᏚᏂᏃᏣᎳᏅ, [[Ithaca, New York|Ithaca, ᎢᏤ York]] (1998).
+* Will Phillips, ''ᏂᎦᎥᎢ ᎤᎿᎸ ᎠᏍᎦᏯ ᎤᏤᎵ ᎥᎢᏒᎢ: ᎠᎳᏍᎬᏓ-ᎾᎥᎢ-ᎠᎳᏍᎬᏓ ᎠᏓᏎᎮᏗ ᎪᎵᏍᏗᏱ ᎠᎴ ᎤᎵᏍᏕᎸᏙᏗ ᏂᏛᎴᏅᏓ ᏂᎯ ᏗᏍᎩᏘᏍᏗ'', ISBN 1-57566-048-2, [[Kensington, NY 1996]], Totonada ᏗᏂᎴᏱᏗᏍᎩ 1994
+* [[Namkhai Norbu Rinpoche]], ''ᎠᏍᎩᏘᏍᏗ Yoga ᎠᎴ ᎯᎠ ᎠᎵᏏᎾᎯᏍᏙᏗ ᏂᎬᏩᏍᏛ ᎠᏨᏍᏛ'', ᎤᎾᏥ ᏢᏓᏥ ᏚᏂᏃᏣᎳᏅ, [[Ithaca, New York|Ithaca, ᏄᏯᎩ]] (1992).
+* [[Tenzin Wangyal Rinpoche]], ''ᎯᎠ Tibetan Yogas ᎠᏍᎩᏘᏍᏗ ᎠᎴ ᎦᎸᏗ'', ᎤᎾᏥ ᏢᏓᏥ ᏚᏂᏃᏣᎳᏅ, [[Ithaca, New York|Ithaca, ᏄᏯᎩ]] (1998).
 
-== ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
-{{wikiquote}}
-
+== ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ ==
 * [http://aras.org''Archive for Research in Archetypal Symbolism''] ᎪᏪᎸ ᎢᏰᎵᏍᏗᎢ, ᎤᏯᎾᏛᏁᏗ, ᎠᎴ ᏄᏍᏛ ᏗᎧᏃᏗ ᎾᏍᎩᏯᎢ ᏂᏛᎴᏅᏓ ᏂᎦᏛ ᎦᏬᎯᎸᏙᏗ ᎯᎠ ᎡᎶᎯ ᎠᎴ ᏂᏛᎴᏅᏓ ᏂᎦᏛ ᏄᎵᏍᏔᏂᏙᎸ ᏴᏫ ᎧᏃᎮᏍᎩ (ᎠᏁᎳ ᎤᎾᏓᏡᎬ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎾᏍᎩᎾᎢ ᎤᏙᎯᏳ ᏄᏍᏛ ᏗᎨᎦᏃᏗ)
 * [http://humanform.info/htm/intelligent.htm Dreams - the intelligent universe] ᎯᎠ ᎤᎪᏗᏗ ᎡᎶᎯ ᎪᎷᏩᏛᏗ ᎢᎦᎢ ᎢᏳᏍᏗ ᏯᏛᎿ ᎨᏒᎢ ᎣᏍᏛ ᎯᎠ ᎠᏂᎩᏍᏗᏍᎬ ᎪᏍᏓᏱ.
 * [http://dreams.valasearch.com Dream Interpretation] ᏄᏍᏛ ᎧᏃᎮᏗ ᏗᏍᎩᏘᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎸᎯᏳᎢ ᎧᏃᎮᏍᎩ, ᏱᏓᏛᎾ ᎤᏙᎯᏳ ᎬᏩᏚᏫᏛ ᏗᏍᎩᏘᏍᏗ, ᎧᏁᎢᏍᏙᏗ, ᎠᏍᎩᏘᏍᏗ ᏅᎠᏥᏯᏃᏗ, ᎠᎴ ᎠᏍᎩᏘᏍᏗ ᎪᎷᏩᏛᏗ.
-* [http://plato.stanford.edu/entries/descartes-epistemology/#1/ The Epistemology of Descartes (fulltext)] lyudetiyvda ᎤᏬᎳᏨᎯ ᎾᎿ ᎯᎠ ᏧᏓᎴᎿᎢ ᎠᏰᎵ ᎯᎠ ᎤᏙᎯᏳ ᎾᏍᎩ ᎠᎴ ᎯᎠ ᎠᏍᎩᏘᏍᏗ ᎡᎶᎯ
 * [http://veda.harekrsna.cz/encyclopedia/dreams.htm Dreams and the Vedanta-sutra (Vedic/Hindu tradition)]
-* [http://msnbc.msn.com/id/5569228/site/newsweek/ Newsweek Article exploring dreams]
 * [http://www.thedreamexplorer.com The Dream Explorer] Online resource ᎠᎴ ᎾᎥ ᏄᎾᏓᎸ ᎾᏍᎩᎾᎢ ᎤᎿᎸ ᎠᏍᎦᏯ ᎠᎴ ᎠᏨᏍᏛ ᎤᎿᎸ ᎠᏍᎦᏯ.
 * [http://www.dreammoods.com/dreamdictionary Dream Moods Dictionary] Online ᏗᏕᏠᏆᏍᏙᏗ ᎾᏍᎩᎾᎢ ᎠᏁᎳᏙᏗ ᏗᏍᎩᏘᏍᏗ.
 * [http://www.dreamstell.net DreamsTell!] ᏗᏕᏠᏆᏍᏙᏗ 'ᎯᎸᎯᏳᎢ' ᎠᏍᎩᏘᏍᏗ ᏗᎬᏟᎶᏍᏙᏗ ᎠᎴ ᎪᎷᏩᏛᏗ
 * [http://www.experienceproject.com/dreams.php Dream Interpretation] ᎠᏍᎩᏘᏍᏗ sharing ᎠᎴ ᎧᏃᎮᎸᏗ resource
 
-[[Category:Dreaming]]
-[[Category:Personal life]]
-[[Category:Psychotherapy]]
-[[Category:Symbols]]
+[[Category:ᎠᏂᏴᏫ]]
+[[Category:ᏗᏛᎪᏔᏅ]]
 
 [[ar:حلم]]
 [[arc:ܚܠܡܐ]]
