*Empty MediaWiki Message*

--- a/ᏍᏆᏂ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᏍᏆᏂ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -1,7 +1,7 @@
 [[File:Spanish Language Map.svg|thumb|300px|ᏍᏆᏂ ᎧᏬᏂᎯᏍᏗ [[ᎡᎶᎯ]]-Ꭿ]]
 '''ᏍᏆᏂ ᎦᏬᏂᎯᏍᏗ''' ᎠᎴᏅᏙᏗ [[ᏍᏆᏂ]], [[ᏳᎳᏛ]]-Ꭿ.
 
-* [[ᎺᎯᎪ]]
+* [[ᎠᏂᏍᏆᏂᎢ]]
 * [[ᏍᏆᏂ]]
 * [[ᎠᎺᎢ]]
 * [[Argentina]]
