*Empty MediaWiki Message*

--- a/ᏍᏆᏂᏤᏍᏛᎢ.mw
+++ b/ᏍᏆᏂᏤᏍᏛᎢ.mw
@@ -1,4 +1,4 @@
-ᏄᏯᎩ (ᏄᏲᎩ, ᎩᎵᏏ, NEW MEXICO) ᎦᏚᎲᎢ ᎡᏉ ᏄᏲᎪᎢ, ᏄᏲᎩ, [[ᎠᎹᏰᏟ]].
+ᏍᏆᏂᏤᏍᏛᎢ (ᏄᏲᎩ, ᎩᎵᏏ, NEW MEXICO) ᎦᏚᎲᎢ ᎡᏉ ᏄᏲᎪᎢ, ᏄᏲᎩ, [[ᎠᎹᏰᏟ]].
 
 [[File:New Mexico state flag.png|none|thumb]]
 
