*Empty MediaWiki Message*

--- a/ᏍᏆᏂᏤᏍᏛᎢ.mw
+++ b/ᏍᏆᏂᏤᏍᏛᎢ.mw
@@ -2,7 +2,7 @@
 
 [[File:New Mexico state flag.png|none|thumb]]
 
-[[File:Map of USA highlighting New York.png|none|thumb]]
+[[File:Map of USA highlighting New Mexico.png|none|thumb]]
 
 {{stub}}
 [[Category:ᎠᎹᏰᏟ]]
