--- a/ᎠᏰᎵ_ᏚᎾᏙᏢᏩᏗᏒ_ᏙᎪᏪᎸ.mw
+++ b/ᎠᏰᎵ_ᏚᎾᏙᏢᏩᏗᏒ_ᏙᎪᏪᎸ.mw
@@ -71,7 +71,7 @@
 *[[Cameroon]]
 *[[Cape Verde]]
 *[[Chad]]
-*[[Columbia]]
+*[[Colombia]]
 *[[Comoros]]
 *[[Congo, Democratic Republic of the]]
 *[[Congo, Republic of the]]
@@ -237,7 +237,7 @@
 *[[Syria]]
 
 ==Ꮳ==
-*[[Japan|ᏣᏩᏂᏏ]]<ref name=CLDR/>
+*[[Japan|ᏣᏩᏂ]]<ref name=CLDR/>
 
 ==Ꮷ==
 *[[South Africa|ᏧᎦᎾᏮ ᎬᎿᎦᏍᏛ]]
