+ᏓᏓᏚᎬ ᎪᏪᎵ, sp, columns

--- a/ᏍᏆᏂ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᏍᏆᏂ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -1,17 +1,20 @@
 [[File:Spanish Language Map.svg|thumb|300px|ᏍᏆᏂ ᎧᏬᏂᎯᏍᏗ [[ᎡᎶᎯ]]-Ꭿ]]
 '''ᏍᏆᏂ ᎦᏬᏂᎯᏍᏗ''' ᎠᎴᏅᏙᏗ [[ᏍᏆᏂ]], [[ᏳᎳᏛ]]-Ꭿ.
 
-* [[ᎠᏂᏍᏆᏂᎢ]]
-* [[ᏍᏆᏂ]]
-* [[ᎠᎺᎢ]]
+==ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ==
+<div style="font-size:100%;-moz-column-count:2; column-count:2;">
+*[[United States|ᎠᎹᏰᏟ]]<ref name=CLDR>Common Locale Data Repository for Cherokee / Tsalagi. 2010.</ref>
+*[[Mexico|ᏍᏆᏂᏱ]]<ref name=CLDR/>
+* [[Spain|ᏍᏆᏂ]]
 * [[Argentina]]
 * [[Bolivia]]
-* [[Chili]]
+* [[Chile]]
 * [[Colombia]]
 * [[Costa Rica]]
 * [[Cuba]]
 * [[Ecuador]]
-* [[Guatamala]]
+*[[El Salvador]]
+* [[Guatemala]]
 * [[Honduras]]
 * [[Nicaragua]]
 * [[Panama]]
@@ -19,6 +22,10 @@
 * [[Peru]]
 * [[Uruguay]]
 * [[Venezuela]]
+</div>
+
+==ᏓᏓᏚᎬ ᎪᏪᎵ==
+{{reflist}}
 
 == ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ ==
 {{Commonscat|Spanish language}}
