--- a/ᏍᏆᏂ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᏍᏆᏂ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -7,7 +7,7 @@
 *[[Mexico|ᏍᏆᏂᏱ]]<ref name=CLDR/>
 * [[Spain|ᏍᏆᏂ]]
 * [[Argentina]]
-* [[Bolivia]]
+* [[Bolivia|ᏬᎵᏮᎠ]]
 * [[Chile]]
 * [[Colombia]]
 * [[Costa Rica]]
